@@ -15,14 +15,20 @@
  */
 package com.dremio.exec.expr.fn;
 
+import com.dremio.common.expression.CompleteType;
+import com.dremio.common.expression.FunctionCall;
+import com.dremio.common.scanner.persistence.ScanResult;
+import com.dremio.common.types.TypeProtos.DataMode;
+import com.dremio.exec.expr.fn.impl.hive.ObjectInspectorHelper;
+import com.dremio.exec.planner.sql.HiveUDFOperator;
+import com.google.common.collect.ArrayListMultimap;
+import com.google.common.collect.Sets;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
 import javax.inject.Inject;
-
 import org.apache.calcite.sql.SqlFunction;
 import org.apache.calcite.sql.SqlOperator;
 import org.apache.hadoop.hive.ql.exec.Description;
@@ -32,31 +38,25 @@ import org.apache.hadoop.hive.ql.udf.generic.GenericUDF;
 import org.apache.hadoop.hive.ql.udf.generic.GenericUDFBridge;
 import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspector;
 
-import com.dremio.common.expression.CompleteType;
-import com.dremio.common.expression.FunctionCall;
-import com.dremio.common.scanner.persistence.ScanResult;
-import com.dremio.common.types.TypeProtos.DataMode;
-import com.dremio.exec.expr.fn.impl.hive.ObjectInspectorHelper;
-import com.dremio.exec.planner.sql.HiveUDFOperator;
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.Sets;
-
 public class HiveFunctionRegistry implements PluggableFunctionRegistry {
-  static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(HiveFunctionRegistry.class);
+  static final org.slf4j.Logger logger =
+      org.slf4j.LoggerFactory.getLogger(HiveFunctionRegistry.class);
 
-  private ArrayListMultimap<String, Class<? extends GenericUDF>> methodsGenericUDF = ArrayListMultimap.create();
+  private ArrayListMultimap<String, Class<? extends GenericUDF>> methodsGenericUDF =
+      ArrayListMultimap.create();
   private ArrayListMultimap<String, Class<? extends UDF>> methodsUDF = ArrayListMultimap.create();
   private Set<Class<?>> nonDeterministicUDFs = new HashSet<>();
 
   /**
-   * Scan the classpath for implementation of GenericUDF/UDF interfaces,
-   * extracts function annotation and store the
-   * (function name) --> (implementation class) mappings.
+   * Scan the classpath for implementation of GenericUDF/UDF interfaces, extracts function
+   * annotation and store the (function name) --> (implementation class) mappings.
+   *
    * @param classpathScan
    */
   @Inject
   public HiveFunctionRegistry(final ScanResult classpathScan) {
-    Set<Class<? extends GenericUDF>> genericUDFClasses = classpathScan.getImplementations(GenericUDF.class);
+    Set<Class<? extends GenericUDF>> genericUDFClasses =
+        classpathScan.getImplementations(GenericUDF.class);
     for (Class<? extends GenericUDF> clazz : genericUDFClasses) {
       register(clazz, methodsGenericUDF);
     }
@@ -89,26 +89,29 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
   @Override
   public List<SqlOperator> listOperators(boolean isDecimalV2Enabled) {
     List<SqlOperator> operators = new ArrayList<>();
-    for (String name : Sets.union(methodsGenericUDF.asMap().keySet(), methodsUDF.asMap().keySet())) {
-      SqlFunction hiveFunction = new HiveUDFOperator(
-        name.toUpperCase(),
-        new PlugginRepositorySqlReturnTypeInference(this, isDecimalV2Enabled));
+    for (String name :
+        Sets.union(methodsGenericUDF.asMap().keySet(), methodsUDF.asMap().keySet())) {
+      SqlFunction hiveFunction =
+          new HiveUDFOperator(
+              name.toUpperCase(),
+              new PlugginRepositorySqlReturnTypeInference(this, isDecimalV2Enabled));
       operators.add(hiveFunction);
     }
 
     return operators;
   }
 
-  private <C,I> void register(Class<? extends I> clazz, ArrayListMultimap<String,Class<? extends I>> methods) {
+  private <C, I> void register(
+      Class<? extends I> clazz, ArrayListMultimap<String, Class<? extends I>> methods) {
     Description desc = clazz.getAnnotation(Description.class);
     String[] names;
     if (desc != null) {
       names = desc.name().split(",");
-      for (int i=0; i<names.length; i++) {
+      for (int i = 0; i < names.length; i++) {
         names[i] = names[i].trim();
       }
-    }else{
-      names = new String[]{clazz.getName().replace('.', '_')};
+    } else {
+      names = new String[] {clazz.getName().replace('.', '_')};
     }
 
     UDFType type = clazz.getAnnotation(UDFType.class);
@@ -116,8 +119,7 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
       nonDeterministicUDFs.add(clazz);
     }
 
-
-    for(int i=0; i<names.length;i++) {
+    for (int i = 0; i < names.length; i++) {
       methods.put(names[i].toLowerCase(), clazz);
     }
   }
@@ -125,6 +127,7 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
   /**
    * Find the UDF class for given function name and check if it accepts the given input argument
    * types. If a match is found, create a holder and return
+   *
    * @param call
    * @return
    */
@@ -142,26 +145,32 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
 
   /**
    * Helper method which resolves the given function call to a Hive UDF. It takes an argument
-   * <i>varCharToStringReplacement</i> which tells to use hive STRING(true) or VARCHAR(false) type for Dremio VARCHAR type
-   * and search Hive UDF registry using this replacement.
+   * <i>varCharToStringReplacement</i> which tells to use hive STRING(true) or VARCHAR(false) type
+   * for Dremio VARCHAR type and search Hive UDF registry using this replacement.
    *
-   * TODO: This is a rudimentary function resolver. Need to include more implicit casting such as DECIMAL28 to
-   * DECIMAL38 as Hive UDFs can accept only DECIMAL38 type.
+   * <p>TODO: This is a rudimentary function resolver. Need to include more implicit casting such as
+   * DECIMAL28 to DECIMAL38 as Hive UDFs can accept only DECIMAL38 type.
    */
   private HiveFuncHolder resolveFunction(FunctionCall call, boolean varCharToStringReplacement) {
     HiveFuncHolder holder;
 
     CompleteType[] argTypes = new CompleteType[call.args.size()];
     ObjectInspector[] argOIs = new ObjectInspector[call.args.size()];
-    for (int i=0; i<call.args.size(); i++) {
+    for (int i = 0; i < call.args.size(); i++) {
       try {
         argTypes[i] = call.args.get(i).getCompleteType();
-        argOIs[i] = ObjectInspectorHelper.getObjectInspector(DataMode.REQUIRED, argTypes[i].toMinorType(),
-             varCharToStringReplacement);
-      } catch(Exception e) {
-        // Hive throws errors if there are unsupported types. Consider there is no hive UDF supporting the
+        argOIs[i] =
+            ObjectInspectorHelper.getObjectInspector(
+                DataMode.REQUIRED, argTypes[i].toMinorType(), varCharToStringReplacement);
+      } catch (Exception e) {
+        // Hive throws errors if there are unsupported types. Consider there is no hive UDF
+        // supporting the
         // given argument types
-        logger.info("Failed to find a hive function for given FunctionCall: '{}' and the argument number is '{}' and the error is", call, i, e);
+        // In many cases this is not really an error due to function registry fallbacks.
+        logger.debug(
+            "Failed to find a hive function for given FunctionCall: '{}' and the argument number is '{}'",
+            call,
+            i);
         return null;
       }
     }
@@ -169,7 +178,7 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
     String funcName = call.getName().toLowerCase();
     List<Exception> errors = new ArrayList<>();
     // search in GenericUDF list
-    for (Class<? extends GenericUDF> clazz: methodsGenericUDF.get(funcName)) {
+    for (Class<? extends GenericUDF> clazz : methodsGenericUDF.get(funcName)) {
       holder = matchAndCreateGenericUDFHolder(clazz, argTypes, argOIs, errors);
       if (holder != null) {
         return holder;
@@ -185,17 +194,22 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
     }
 
     if (errors.size() == 0) {
-      logger.info("Unable to find a hive function with the same name for the following function: '{}'", call);
+      logger.info(
+          "Unable to find a hive function with the same name for the following function: '{}'",
+          call);
     } else {
-      logger.info("Failed to instantiate Hive class for the following function: '{}' and the error is '{}'", call, appendAllTheErrors(errors));
+      logger.info(
+          "Failed to instantiate Hive class for the following function: '{}' and the error is '{}'",
+          call,
+          appendAllTheErrors(errors));
     }
     return null;
   }
 
   private String appendAllTheErrors(List<Exception> errors) {
     StringBuilder sb = new StringBuilder();
-    for(int i=0;i<errors.size();i++) {
-      if(i>0) {
+    for (int i = 0; i < errors.size(); i++) {
+      if (i > 0) {
         sb.append("; ");
       }
       sb.append(errors.get(i).getMessage());
@@ -203,20 +217,22 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
     return sb.toString();
   }
 
-  private HiveFuncHolder matchAndCreateGenericUDFHolder(Class<? extends GenericUDF> udfClazz,
-                                              CompleteType[] argTypes,
-                                              ObjectInspector[] argOIs, List<Exception> errors) {
+  private HiveFuncHolder matchAndCreateGenericUDFHolder(
+      Class<? extends GenericUDF> udfClazz,
+      CompleteType[] argTypes,
+      ObjectInspector[] argOIs,
+      List<Exception> errors) {
     // probe UDF to find if the arg types and acceptable
     // if acceptable create a holder object
     try {
-      GenericUDF udfInstance = udfClazz.newInstance();
-       ObjectInspector returnOI = udfInstance.initialize(argOIs);
+      GenericUDF udfInstance = udfClazz.getDeclaredConstructor().newInstance();
+      ObjectInspector returnOI = udfInstance.initialize(argOIs);
       return new HiveFuncHolder(
-        udfClazz,
-        argTypes,
-        returnOI,
-        CompleteType.fromMinorType(ObjectInspectorHelper.getMinorType(returnOI)),
-        nonDeterministicUDFs.contains(udfClazz));
+          udfClazz,
+          argTypes,
+          returnOI,
+          CompleteType.fromMinorType(ObjectInspectorHelper.getMinorType(returnOI)),
+          nonDeterministicUDFs.contains(udfClazz));
     } catch (Exception e) {
       errors.add(e);
       /*ignore this*/
@@ -225,21 +241,24 @@ public class HiveFunctionRegistry implements PluggableFunctionRegistry {
     return null;
   }
 
-  private HiveFuncHolder matchAndCreateUDFHolder(String udfName,
-                                                 Class<? extends UDF> udfClazz,
-                                                 CompleteType[] argTypes,
-                                                 ObjectInspector[] argOIs, List<Exception> errors) {
+  private HiveFuncHolder matchAndCreateUDFHolder(
+      String udfName,
+      Class<? extends UDF> udfClazz,
+      CompleteType[] argTypes,
+      ObjectInspector[] argOIs,
+      List<Exception> errors) {
     try {
-      GenericUDF udfInstance = new GenericUDFBridge(udfName, false/* is operator */, udfClazz.getName());
+      GenericUDF udfInstance =
+          new GenericUDFBridge(udfName, false /* is operator */, udfClazz.getName());
       ObjectInspector returnOI = udfInstance.initialize(argOIs);
 
       return new HiveFuncHolder(
-        udfName,
-        udfClazz,
-        argTypes,
-        returnOI,
-        CompleteType.fromMinorType(ObjectInspectorHelper.getMinorType(returnOI)),
-        nonDeterministicUDFs.contains(udfClazz));
+          udfName,
+          udfClazz,
+          argTypes,
+          returnOI,
+          CompleteType.fromMinorType(ObjectInspectorHelper.getMinorType(returnOI)),
+          nonDeterministicUDFs.contains(udfClazz));
     } catch (Exception e) {
       errors.add(e);
       /*ignore this*/
