@@ -15,30 +15,8 @@
  */
 package com.dremio.exec.catalog;
 
+import static com.dremio.exec.catalog.CatalogOptions.SOURCE_SECRETS_ENCRYPTION_ENABLED;
 import static com.dremio.exec.catalog.CatalogOptions.SOURCE_SECRETS_RESOLUTION_ENABLED;
-
-import java.security.AccessControlException;
-import java.util.Comparator;
-import java.util.ConcurrentModificationException;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionException;
-import java.util.concurrent.Executor;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
-import java.util.concurrent.locks.ReentrantReadWriteLock;
-import java.util.function.Consumer;
-import java.util.function.Predicate;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-
-import javax.inject.Provider;
 
 import com.dremio.common.AutoCloseables;
 import com.dremio.common.VM;
@@ -91,30 +69,69 @@ import com.dremio.service.namespace.source.proto.SourceInternalData;
 import com.dremio.service.orphanage.Orphanage;
 import com.dremio.service.scheduler.ModifiableSchedulerService;
 import com.dremio.service.users.SystemUser;
+import com.dremio.services.credentials.CredentialsServiceUtils;
+import com.dremio.services.credentials.NoopSecretsCreator;
+import com.dremio.services.credentials.SecretsCreator;
+import com.dremio.services.credentials.SystemSecretCredentialsProvider;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Stopwatch;
 import com.google.common.base.Strings;
 import com.google.common.primitives.Ints;
-
 import io.opentelemetry.api.trace.Span;
 import io.opentelemetry.instrumentation.annotations.WithSpan;
 import io.protostuff.LinkedBuffer;
 import io.protostuff.ProtostuffIOUtil;
+import java.lang.reflect.InvocationTargetException;
+import java.net.URI;
+import java.security.AccessControlException;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.ConcurrentModificationException;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.Executor;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.function.Consumer;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import javax.inject.Provider;
 
 /**
  * Manages the Dremio system state related to a StoragePlugin.
  *
- * Also owns the SourceMetadataManager, the task driver responsible for maintaining metadata
+ * <p>Also owns the SourceMetadataManager, the task driver responsible for maintaining metadata
  * freshness.
  *
- * Locking model: exposes a readLock (using the inner plugin) and a writeLock (changing the inner
+ * <p>Locking model: exposes a readLock (using the inner plugin) and a writeLock (changing the inner
  * plugin). The locking model is exposed externally so that CatalogServiceImpl can get locks as
  * necessary during modifications.
- *
  */
 public class ManagedStoragePlugin implements AutoCloseable {
-  private static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(ManagedStoragePlugin.class);
+  private static final org.slf4j.Logger logger =
+      org.slf4j.LoggerFactory.getLogger(ManagedStoragePlugin.class);
+  private static final Predicate<String> IS_NOT_A_URI_FILTER =
+      secret -> {
+        String scheme;
+        try {
+          final URI uri = CredentialsServiceUtils.safeURICreate(secret);
+          scheme = uri.getScheme();
+        } catch (IllegalArgumentException ignored) {
+          scheme = null;
+        }
+
+        return scheme == null;
+      };
 
   private final String name;
   private final SabotContext context;
@@ -123,19 +140,18 @@ public class ManagedStoragePlugin implements AutoCloseable {
   private final Executor executor;
 
   /**
-   * A read lock for interacting with the plugin. Should be used for most external interactions except where the methods
-   * were designed to be resilient to underlying changes to avoid contention/locking needs.
+   * A read lock for interacting with the plugin. Should be used for most external interactions
+   * except where the methods were designed to be resilient to underlying changes to avoid
+   * contention/locking needs.
    */
   private final ReentrantReadWriteLock.ReadLock readLock;
 
-  /**
-   * A write lock that must be acquired before starting, stopping or replacing the plugin.
-   */
+  /** A write lock that must be acquired before starting, stopping or replacing the plugin. */
   private final ReentrantReadWriteLock.WriteLock writeLock;
+
   private final PermissionCheckCache permissionsCache;
   private final SourceMetadataManager metadataManager;
   private final OptionManager options;
-  private final CatalogServiceMonitor monitor;
   private final NamespaceService systemUserNamespaceService;
   private final Orphanage orphanage;
 
@@ -143,35 +159,32 @@ public class ManagedStoragePlugin implements AutoCloseable {
   private volatile StoragePlugin plugin;
   private volatile MetadataPolicy metadataPolicy;
   private volatile StoragePluginId pluginId;
-  private volatile ConnectionConf<?,?> conf;
-  private volatile ConnectionConf<?,?> resolvedConf;
+  private volatile ConnectionConf<?, ?> conf;
   private volatile Stopwatch startup = Stopwatch.createUnstarted();
   private volatile SourceState state = SourceState.badState("Source not yet started.");
   private final Thread fixFailedThread;
   private final Predicate<String> influxSourcePred;
   private volatile boolean closed = false;
 
-  /**
-   * Included in instance variables because it is very useful during debugging.
-   */
+  /** Included in instance variables because it is very useful during debugging. */
   private final ReentrantReadWriteLock rwlock;
 
   private final Lock refreshStateLock = new ReentrantLock();
 
   public ManagedStoragePlugin(
-    SabotContext context,
-    Executor executor,
-    boolean isMaster,
-    ModifiableSchedulerService modifiableScheduler,
-    NamespaceService systemUserNamespaceService,
-    Orphanage orphanage,
-    LegacyKVStore<NamespaceKey, SourceInternalData> sourceDataStore,
-    SourceConfig sourceConfig,
-    OptionManager options,
-    ConnectionReader reader,
-    CatalogServiceMonitor monitor,
-    Provider<MetadataRefreshInfoBroadcaster> broadcasterProvider,
-    Predicate<String> influxSourcePred) {
+      SabotContext context,
+      Executor executor,
+      boolean isMaster,
+      ModifiableSchedulerService modifiableScheduler,
+      NamespaceService systemUserNamespaceService,
+      Orphanage orphanage,
+      LegacyKVStore<NamespaceKey, SourceInternalData> sourceDataStore,
+      SourceConfig sourceConfig,
+      OptionManager options,
+      ConnectionReader reader,
+      CatalogServiceMonitor monitor,
+      Provider<MetadataRefreshInfoBroadcaster> broadcasterProvider,
+      Predicate<String> influxSourcePred) {
     this.rwlock = new ReentrantReadWriteLock(true);
     this.executor = executor;
     this.readLock = rwlock.readLock();
@@ -183,38 +196,50 @@ public class ManagedStoragePlugin implements AutoCloseable {
     this.systemUserNamespaceService = systemUserNamespaceService;
     this.orphanage = orphanage;
     this.options = options;
-    this.conf = reader.getConnectionConf(sourceConfig);
-    this.resolvedConf = resolveConnectionConf(conf);
-    this.plugin = resolvedConf.newPlugin(context, sourceConfig.getName(), this::getId);
-    this.metadataPolicy = sourceConfig.getMetadataPolicy() == null ? CatalogService.NEVER_REFRESH_POLICY : sourceConfig.getMetadataPolicy();
-    this.permissionsCache = new PermissionCheckCache(this::getPlugin, getAuthTtlMsProvider(options, sourceConfig), 2500);
     this.reader = reader;
-    this.monitor = monitor;
+    this.conf =
+        this.reader.getConnectionConf(sourceConfig); // must use decorated reader (this.reader)
+    this.plugin =
+        resolveConnectionConf(conf).newPlugin(context, sourceConfig.getName(), this::getId);
+    this.metadataPolicy =
+        sourceConfig.getMetadataPolicy() == null
+            ? CatalogService.NEVER_REFRESH_POLICY
+            : sourceConfig.getMetadataPolicy();
+    this.permissionsCache =
+        new PermissionCheckCache(
+            this::getPlugin, getAuthTtlMsProvider(options, sourceConfig), 2500);
+
     this.influxSourcePred = influxSourcePred;
 
     fixFailedThread = new FixFailedToStart();
     // leaks this so do last.
-    this.metadataManager = new SourceMetadataManager(
-        sourceKey,
-        modifiableScheduler,
-        isMaster,
-        sourceDataStore,
-        new MetadataBridge(),
-        options,
-        monitor,
-        broadcasterProvider, context.getClusterCoordinator());
+    this.metadataManager =
+        new SourceMetadataManager(
+            sourceKey,
+            modifiableScheduler,
+            isMaster,
+            sourceDataStore,
+            new MetadataBridge(),
+            options,
+            monitor,
+            broadcasterProvider,
+            context.getClusterCoordinator());
   }
 
   /**
-   * Resolve the secrets on the connection conf if secrets resolution is enabled. This should be
-   * used with caution, as secrets should not be accidentally leaked or persisted.
-   * TODO: This assumes both Coordinators and Executors can individually resolve the secrets which is not always the case
+   * If general secret resolution is enabled, resolve any @Secret annotated field. Always decrypt if
+   * necessary, since we don't want encrypted secrets to break if the option is toggled. Secret
+   * resolution is backwards compatible with plain text secrets.
    */
-  private ConnectionConf<?,?> resolveConnectionConf(ConnectionConf<?,?> connectionConf) {
+  private ConnectionConf<?, ?> resolveConnectionConf(ConnectionConf<?, ?> connectionConf) {
+    // General Secret Resolution, also handles in-line encrypted secrets.
     if (this.options.getOption(SOURCE_SECRETS_RESOLUTION_ENABLED)) {
-      return connectionConf.resolveSecrets(context.getCredentialsServiceProvider().get());
+      return connectionConf.resolveSecrets(context.getCredentialsServiceProvider().get(), null);
     }
-    return connectionConf;
+    // Handle only in-line encrypted secrets.
+    return connectionConf.resolveSecrets(
+        context.getCredentialsServiceProvider().get(),
+        Collections.singleton(SystemSecretCredentialsProvider.SECRET_PROVIDER_SCHEME));
   }
 
   protected PermissionCheckCache getPermissionsCache() {
@@ -249,12 +274,11 @@ public class ManagedStoragePlugin implements AutoCloseable {
     return context.getOptionManager().getOption(CatalogOptions.STORAGE_PLUGIN_CREATE_MAX);
   }
 
-
   /**
    * Synchronize plugin state to the provided target source config.
    *
-   * Note that this will fail if the target config is older than the existing config, in terms of creation time or
-   * version.
+   * <p>Note that this will fail if the target config is older than the existing config, in terms of
+   * creation time or version.
    *
    * @param targetConfig target source config
    * @return managed storage plugin
@@ -262,7 +286,7 @@ public class ManagedStoragePlugin implements AutoCloseable {
    */
   void synchronizeSource(final SourceConfig targetConfig) throws Exception {
 
-    if(matches(targetConfig)) {
+    if (matches(targetConfig)) {
       logger.trace("Source [{}] already up-to-date, not synchronizing", targetConfig.getName());
       return;
     }
@@ -271,7 +295,7 @@ public class ManagedStoragePlugin implements AutoCloseable {
     try (Closeable write = writeLock()) {
 
       // check again under write lock to make sure things didn't already synchronize.
-      if(matches(targetConfig)) {
+      if (matches(targetConfig)) {
         logger.trace("Source [{}] already up-to-date, not synchronizing", targetConfig.getName());
         return;
       }
@@ -282,9 +306,10 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
       if (creationTime > targetCreationTime) {
         // in-memory source config is newer than the target config, in terms of creation time
-        throw new ConcurrentModificationException(String.format(
-            "Source [%s] was updated, and the given configuration has older ctime (current: %d, given: %d)",
-            targetConfig.getName(), creationTime, targetCreationTime));
+        throw new ConcurrentModificationException(
+            String.format(
+                "Source [%s] was updated, and the given configuration has older ctime (current: %d, given: %d)",
+                targetConfig.getName(), creationTime, targetCreationTime));
 
       } else if (creationTime == targetCreationTime) {
         final SourceConfig currentConfig = sourceConfig;
@@ -295,9 +320,12 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
         if (compareTo > 0) {
           // in-memory source config is newer than the target config, in terms of version
-          throw new ConcurrentModificationException(String.format(
-            "Source [%s] was updated, and the given configuration has older version (current: %d, given: %d)",
-            currentConfig.getName(), currentConfig.getConfigOrdinal(), targetConfig.getConfigOrdinal()));
+          throw new ConcurrentModificationException(
+              String.format(
+                  "Source [%s] was updated, and the given configuration has older version (current: %d, given: %d)",
+                  currentConfig.getName(),
+                  currentConfig.getConfigOrdinal(),
+                  targetConfig.getConfigOrdinal()));
         }
 
         if (compareTo == 0) {
@@ -305,8 +333,10 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
           if (sourceConfigDiffersTagAlone(targetConfig)) {
             // warn but do not throw as this error is benign - if all coordinators and executors
-            // share the same effective source config value, they can all function to plan and execute
-            // the query without issue - the configs having a different tag value reflects a programming
+            // share the same effective source config value, they can all function to plan and
+            // execute
+            // the query without issue - the configs having a different tag value reflects a
+            // programming
             // bug but one that can be gracefully recovered from
             logger.warn(
                 "Current and given configurations for source [{}] have same version ({}) but different tags"
@@ -316,39 +346,47 @@ public class ManagedStoragePlugin implements AutoCloseable {
                 reader.toStringWithoutSecrets(currentConfig),
                 reader.toStringWithoutSecrets(targetConfig));
           } else {
-            // if the ordinal is the same but some property other than the tag differs, we do not know if
+            // if the ordinal is the same but some property other than the tag differs, we do not
+            // know if
             // we have the correct or the outdated config, so we must fail synchronization
-            throw new IllegalStateException(String.format(
-              "Current and given configurations for source [%s] have same version (%d) but different values" +
-                " [current source: %s, given source: %s]",
-              currentConfig.getName(), currentConfig.getConfigOrdinal(),
-              reader.toStringWithoutSecrets(currentConfig),
-              reader.toStringWithoutSecrets(targetConfig)));
+            throw new IllegalStateException(
+                String.format(
+                    "Current and given configurations for source [%s] have same version (%d) but different values"
+                        + " [current source: %s, given source: %s]",
+                    currentConfig.getName(),
+                    currentConfig.getConfigOrdinal(),
+                    reader.toStringWithoutSecrets(currentConfig),
+                    reader.toStringWithoutSecrets(targetConfig)));
           }
         }
       }
-      // else (creationTime < targetCreationTime), the source config is new but plugins has an entry with the same
+      // else (creationTime < targetCreationTime), the source config is new but plugins has an entry
+      // with the same
       // name, so replace the plugin regardless of the checks
 
       // in-memory storage plugin is older than the one persisted or differs in tag alone, update
       replacePlugin(targetConfig, createWaitMillis(), false);
-      return;
     }
   }
 
   private void addDefaults(SourceConfig config) {
-    if(config.getCtime() == null) {
+    if (config.getCtime() == null) {
       config.setCtime(System.currentTimeMillis());
     }
 
-    if(config.getMetadataPolicy() == null) {
+    if (config.getMetadataPolicy() == null) {
       config.setMetadataPolicy(CatalogService.DEFAULT_METADATA_POLICY);
     }
   }
 
-  private void updateConfig(NamespaceService userNamespace, SourceConfig config, NamespaceAttribute...attributes) throws ConcurrentModificationException, NamespaceException {
+  private void updateConfig(
+      NamespaceService userNamespace, SourceConfig config, NamespaceAttribute... attributes)
+      throws ConcurrentModificationException, NamespaceException {
     if (logger.isTraceEnabled()) {
-      logger.trace("Adding or updating source [{}].", config.getName(), new RuntimeException("Nothing wrong, just show stack trace for debug."));
+      logger.trace(
+          "Adding or updating source [{}].",
+          config.getName(),
+          new RuntimeException("Nothing wrong, just show stack trace for debug."));
     } else {
       logger.debug("Adding or updating source [{}].", config.getName());
     }
@@ -372,33 +410,44 @@ public class ManagedStoragePlugin implements AutoCloseable {
     }
   }
 
-  void createSource(SourceConfig config, String userName, NamespaceAttribute... attributes) throws TimeoutException, Exception {
+  void createSource(SourceConfig config, String userName, NamespaceAttribute... attributes)
+      throws TimeoutException, Exception {
     createOrUpdateSource(true, config, userName, attributes);
   }
 
-  void updateSource(SourceConfig config, String userName, NamespaceAttribute... attributes) throws ConcurrentModificationException, NamespaceException {
+  void updateSource(SourceConfig config, String userName, NamespaceAttribute... attributes)
+      throws ConcurrentModificationException, NamespaceException {
     createOrUpdateSource(false, config, userName, attributes);
   }
 
-  private void createOrUpdateSource(final boolean create, SourceConfig config, String userName, NamespaceAttribute... attributes) throws ConcurrentModificationException, NamespaceException {
+  private void createOrUpdateSource(
+      final boolean create, SourceConfig config, String userName, NamespaceAttribute... attributes)
+      throws ConcurrentModificationException, NamespaceException {
     final NamespaceService userNamespace = context.getNamespaceService(userName);
 
     if (logger.isTraceEnabled()) {
-      logger.trace("{} source [{}].", create ? "Creating" : "Updating", config.getName(), new RuntimeException("Nothing wrong, just show stack trace for debug."));
+      logger.trace(
+          "{} source [{}].",
+          create ? "Creating" : "Updating",
+          config.getName(),
+          new RuntimeException("Nothing wrong, just show stack trace for debug."));
     } else if (logger.isDebugEnabled()) {
       logger.debug("{} source [{}].", create ? "Creating" : "Updating", config.getName());
     }
-    // VersionedPlugin  is a source that does not save datasets in Namespace. So they never need to be refreshed
-    if (this.plugin instanceof VersionedPlugin) {
+    // VersionedPlugin  is a source that does not save datasets in Namespace. So they never need to
+    // be refreshed
+    if (this.plugin != null && this.plugin.isWrapperFor(VersionedPlugin.class)) {
       config.setMetadataPolicy(CatalogService.NEVER_REFRESH_POLICY);
     }
 
     SourceConfig originalConfigCopy = ProtostuffUtil.copy(sourceConfig);
 
+    // Preprocessing on the config before creation
     addDefaults(config);
     addGlobalKeys(config);
+    encryptSecrets(config);
 
-    if(!create) {
+    if (!create) {
       updateConfig(userNamespace, config, attributes);
     }
 
@@ -425,15 +474,22 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
         if (oldMetadataIsBad) {
           if (!keepStaleMetadata()) {
-            logger.debug("Old metadata data may be bad; deleting all descendants of source [{}]", config.getName());
-            // TODO: expensive call on non-master coordinators (sends as many RPC requests as entries under the source)
-            SourceNamespaceService.DeleteCallback deleteCallback = (DatasetConfig datasetConfig) -> {
-              CatalogUtil.addIcebergMetadataOrphan(datasetConfig, orphanage);
-            };
-            systemUserNamespaceService.deleteSourceChildren(config.getKey(), config.getTag(), deleteCallback);
+            logger.debug(
+                "Old metadata data may be bad; deleting all descendants of source [{}]",
+                config.getName());
+            // TODO: expensive call on non-master coordinators (sends as many RPC requests as
+            // entries under the source)
+            SourceNamespaceService.DeleteCallback deleteCallback =
+                (DatasetConfig datasetConfig) -> {
+                  CatalogUtil.addIcebergMetadataOrphan(datasetConfig, orphanage);
+                };
+            systemUserNamespaceService.deleteSourceChildren(
+                config.getKey(), config.getTag(), deleteCallback);
           } else {
-            logger.info("Old metadata data may be bad, but preserving descendants of source [{}] because '{}' is enabled",
-                config.getName(), CatalogOptions.STORAGE_PLUGIN_KEEP_METADATA_ON_REPLACE.getOptionName());
+            logger.info(
+                "Old metadata data may be bad, but preserving descendants of source [{}] because '{}' is enabled",
+                config.getName(),
+                CatalogOptions.STORAGE_PLUGIN_KEEP_METADATA_ON_REPLACE.getOptionName());
           }
         }
 
@@ -442,7 +498,8 @@ public class ManagedStoragePlugin implements AutoCloseable {
         try {
           userNamespace.addOrUpdateSource(config.getKey(), config, attributes);
         } catch (ConcurrentModificationException | DatastoreException e) {
-          logger.trace("Saving to namespace store failed, reverting the in-memory source config to the original version...");
+          logger.trace(
+              "Saving to namespace store failed, reverting the in-memory source config to the original version...");
           setLocals(originalConfigCopy);
           throw e;
         }
@@ -450,7 +507,8 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
       // ***** Complete Local Update **** //
 
-      // now that we're outside the plugin lock, we should refresh the dataset names. Note that this could possibly get
+      // now that we're outside the plugin lock, we should refresh the dataset names. Note that this
+      // could possibly get
       // run on a different config if two source updates are racing to this lock.
       if (refreshDatasetNames) {
         if (!keepStaleMetadata()) {
@@ -465,27 +523,36 @@ public class ManagedStoragePlugin implements AutoCloseable {
       // us to avoid two separate threads refreshing simultaneously (possible if we put this above
       // the inline plugin.refresh() call.)
       stopwatchForPlugin.stop();
-      logger.debug("Source added [{}], took {} milliseconds", config.getName(), stopwatchForPlugin.elapsed(TimeUnit.MILLISECONDS));
+      logger.debug(
+          "Source added [{}], took {} milliseconds",
+          config.getName(),
+          stopwatchForPlugin.elapsed(TimeUnit.MILLISECONDS));
 
     } catch (ConcurrentModificationException ex) {
-      throw UserException.concurrentModificationError(ex).message(
-          "Source update failed due to a concurrent update. Please try again [%s].", config.getName()).build(logger);
+      throw UserException.concurrentModificationError(ex)
+          .message(
+              "Source update failed due to a concurrent update. Please try again [%s].",
+              config.getName())
+          .build(logger);
     } catch (AccessControlException ex) {
-      throw UserException.permissionError(ex).message(
-        "Update privileges on source [%s] failed: %s", config.getName(), ex.getMessage()).build(logger);
+      throw UserException.permissionError(ex)
+          .message("Update privileges on source [%s] failed: %s", config.getName(), ex.getMessage())
+          .build(logger);
     } catch (InvalidNamespaceNameException ex) {
       throw UserException.validationError(ex)
-        .message(String.format("Failure creating/updating this source [%s]: %s", config.getName(), ex.getMessage()))
-        .build(logger);
+          .message(
+              String.format(
+                  "Failure creating/updating this source [%s]: %s",
+                  config.getName(), ex.getMessage()))
+          .build(logger);
     } catch (Exception ex) {
       String suggestedUserAction = getState().getSuggestedUserAction();
       if (suggestedUserAction == null || suggestedUserAction.isEmpty()) {
         // If no user action was suggested, fall back to a basic message.
-        suggestedUserAction = String.format("Failure creating/updating this source [%s].", config.getName());
+        suggestedUserAction =
+            String.format("Failure creating/updating this source [%s].", config.getName());
       }
-      throw UserException.validationError(ex)
-        .message(suggestedUserAction)
-        .build(logger);
+      throw UserException.validationError(ex).message(suggestedUserAction).build(logger);
     }
   }
 
@@ -494,7 +561,8 @@ public class ManagedStoragePlugin implements AutoCloseable {
     if (connectionConf instanceof SupportsGlobalKeys) {
       SupportsGlobalKeys sgc = (SupportsGlobalKeys) connectionConf;
       try {
-        List<Property> globalKeys = context.getGlobalCredentailsServiceProvider().get().getGlobalKeys();
+        List<Property> globalKeys =
+            context.getGlobalCredentialsServiceProvider().get().getGlobalKeys();
         sgc.setGlobalKeys(globalKeys);
         config.setConnectionConf(connectionConf);
       } catch (IllegalStateException e) {
@@ -503,29 +571,54 @@ public class ManagedStoragePlugin implements AutoCloseable {
     }
   }
 
-  private boolean keepStaleMetadata() {
-    return context.getOptionManager().getOption(CatalogOptions.STORAGE_PLUGIN_KEEP_METADATA_ON_REPLACE);
+  /**
+   * In-line encrypt SecretRefs within the connectionConf on the given SourceConfig. Has no effect
+   * on non-SecretRef secrets. If source secret encryption is not enabled, no-op.
+   */
+  private void encryptSecrets(SourceConfig config) {
+    if (this.options.getOption(SOURCE_SECRETS_ENCRYPTION_ENABLED)) {
+      final SecretsCreator secretsCreator = context.getSecretsCreator().get();
+      // Short-circuit early if encryption is disabled via binding
+      if (secretsCreator instanceof NoopSecretsCreator) {
+        return;
+      }
+      // Get Conf from Decorated Connection Reader
+      final ConnectionConf<?, ?> connectionConf = config.getConnectionConf(reader);
+      connectionConf.encryptSecrets(secretsCreator, IS_NOT_A_URI_FILTER);
+      config.setConnectionConf(connectionConf);
+    }
   }
 
+  private boolean keepStaleMetadata() {
+    return context
+        .getOptionManager()
+        .getOption(CatalogOptions.STORAGE_PLUGIN_KEEP_METADATA_ON_REPLACE);
+  }
+
+  /** Given we know the source configs are the same, check if the tags are as well. */
   private void compareConfigs(SourceConfig existing, SourceConfig config) {
     if (Objects.equals(existing.getTag(), config.getTag())) {
       // in-memory source config has a different value but the same etag
-      throw new IllegalStateException(String.format(
-        "Current and given configurations for source [%s] have same etag (%s) but different values" +
-          " [current source: %s, given source: %s]",
-        existing.getName(), existing.getTag(),
-        reader.toStringWithoutSecrets(existing),
-        reader.toStringWithoutSecrets(config)));
+      throw new IllegalStateException(
+          String.format(
+              "Current and given configurations for source [%s] have same etag (%s) but different values"
+                  + " [current source: %s, given source: %s]",
+              existing.getName(),
+              existing.getTag(),
+              reader.toStringWithoutSecrets(existing),
+              reader.toStringWithoutSecrets(config)));
     }
   }
 
   DatasetSaver getSaver() {
-    // note, this is a protected saver so no one will be able to save a dataset if the source is currently going through editing changes (write lock held).
+    // note, this is a protected saver so no one will be able to save a dataset if the source is
+    // currently going through editing changes (write lock held).
     return metadataManager.getSaver();
   }
 
   /**
    * Return clone of the sourceConfig
+   *
    * @return
    */
   public SourceConfig getConfig() {
@@ -541,12 +634,13 @@ public class ManagedStoragePlugin implements AutoCloseable {
   }
 
   public SourceState getState() {
-    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in read paths.
+    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in
+    // read paths.
     return state;
   }
 
   public boolean matches(SourceConfig config) {
-    try(AutoCloseableLock readLock = readLock()){
+    try (AutoCloseableLock readLock = readLock()) {
       return MissingPluginConf.TYPE.equals(sourceConfig.getType()) || sourceConfig.equals(config);
     }
   }
@@ -560,7 +654,8 @@ public class ManagedStoragePlugin implements AutoCloseable {
   }
 
   public ConnectionConf<?, ?> getConnectionConf() {
-    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in read paths.
+    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in
+    // read paths.
     return conf;
   }
 
@@ -570,18 +665,24 @@ public class ManagedStoragePlugin implements AutoCloseable {
    * @return dataset retrieval options defined on the source
    */
   DatasetRetrievalOptions getDefaultRetrievalOptions() {
-    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in read paths.
-    return DatasetRetrievalOptions.fromMetadataPolicy(metadataPolicy)
-        .toBuilder()
+    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in
+    // read paths.
+    return DatasetRetrievalOptions.fromMetadataPolicy(metadataPolicy).toBuilder()
         .setMaxMetadataLeafColumns(getMaxMetadataColumns())
         .setMaxNestedLevel(getMaxNestedLevel())
         .build()
         .withFallback(DatasetRetrievalOptions.DEFAULT);
   }
 
-  public StoragePluginRulesFactory getRulesFactory() throws InstantiationException, IllegalAccessException {
-    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in read paths. This is
-    // especially important here since this method is used even if the query does not refer to this source.
+  public StoragePluginRulesFactory getRulesFactory()
+      throws InstantiationException,
+          IllegalAccessException,
+          InvocationTargetException,
+          NoSuchMethodException {
+    // not read under a read lock since it is updated via volatile. Allows us to avoid locking in
+    // read paths. This is
+    // especially important here since this method is used even if the query does not refer to this
+    // source.
 
     // grab local to avoid changes under us later.
     final StoragePlugin plugin = this.plugin;
@@ -589,8 +690,8 @@ public class ManagedStoragePlugin implements AutoCloseable {
       return null;
     }
 
-    if(plugin.getRulesFactoryClass() != null) {
-      return plugin.getRulesFactoryClass().newInstance();
+    if (plugin.getRulesFactoryClass() != null) {
+      return plugin.getRulesFactoryClass().getDeclaredConstructor().newInstance();
     }
 
     return null;
@@ -598,8 +699,9 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   /**
    * Start this plugin asynchronously
-
-   * @return A future that returns the state of this plugin once started (or throws Exception if the startup failed).
+   *
+   * @return A future that returns the state of this plugin once started (or throws Exception if the
+   *     startup failed).
    */
   CompletableFuture<SourceState> startAsync() {
     return startAsync(sourceConfig, true);
@@ -607,51 +709,57 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   /**
    * Generate a supplier that produces source state
+   *
    * @param config
-   * @param closeMetaDataManager - During dremio startup, we don't close metadataManager when sources are in bad state,
-   *                             because we need state refresh for bad sources.
-   *                             When a user tries to add a source and it's in bad state, we close metadataManager to avoid
-   *                             wasting additional space.
+   * @param closeMetaDataManager - During dremio startup, we don't close metadataManager when
+   *     sources are in bad state, because we need state refresh for bad sources. When a user tries
+   *     to add a source and it's in bad state, we close metadataManager to avoid wasting additional
+   *     space.
    * @return
    */
-  private Supplier<SourceState> newStartSupplier(SourceConfig config, final boolean closeMetaDataManager) {
+  private Supplier<SourceState> newStartSupplier(
+      SourceConfig config, final boolean closeMetaDataManager) {
     try {
-      return nameSupplier("start-" + sourceConfig.getName(), () -> {
-        try {
-          startup = Stopwatch.createStarted();
-          logger.debug("Starting: {}", sourceConfig.getName());
-          plugin.start();
-          setLocals(config);
-          startup.stop();
-          if (state.getStatus() == SourceStatus.bad) {
-            // Check the state here and throw exception so that we close the partially started plugin properly in the
-            // exception handling code
-            throw new Exception(state.toString());
-          }
+      return nameSupplier(
+          "start-" + sourceConfig.getName(),
+          () -> {
+            try {
+              startup = Stopwatch.createStarted();
+              logger.debug("Starting: {}", sourceConfig.getName());
+              plugin.start();
+              setLocals(config);
+              startup.stop();
+              if (state.getStatus() == SourceStatus.bad) {
+                // Check the state here and throw exception so that we close the partially started
+                // plugin properly in the
+                // exception handling code
+                throw new Exception(state.toString());
+              }
 
-          return state;
-        } catch (Throwable e) {
-          if (config.getType() != MissingPluginConf.TYPE) {
-            logger.warn("Error starting new source: {}", sourceConfig.getName(), e);
-          }
-          //TODO: Throwables.gerRootCause(e)
-          state = SourceState.badState(e.getMessage(), e.getMessage());
+              return state;
+            } catch (Throwable e) {
+              if (config.getType() != MissingPluginConf.TYPE) {
+                logger.warn("Error starting new source: {}", sourceConfig.getName(), e);
+              }
+              // TODO: Throwables.gerRootCause(e)
+              state = SourceState.badState(e.getMessage(), e.getMessage());
 
-          try {
-            // failed to startup, make sure to close.
-            if (closeMetaDataManager) {
-              AutoCloseables.close(metadataManager, plugin);
-            } else {
-              plugin.close();
+              try {
+                // failed to startup, make sure to close.
+                if (closeMetaDataManager) {
+                  AutoCloseables.close(metadataManager, plugin);
+                } else {
+                  plugin.close();
+                }
+                plugin = null;
+              } catch (Exception ex) {
+                e.addSuppressed(
+                    new RuntimeException("Cleanup exception after initial failure.", ex));
+              }
+
+              throw new CompletionException(e);
             }
-            plugin = null;
-          } catch (Exception ex) {
-            e.addSuppressed(new RuntimeException("Cleanup exception after initial failure.", ex));
-          }
-
-          throw new CompletionException(e);
-        }
-      });
+          });
     } catch (Exception ex) {
       return () -> {
         throw new CompletionException(ex);
@@ -663,17 +771,21 @@ public class ManagedStoragePlugin implements AutoCloseable {
    * Start this plugin asynchronously
    *
    * @param config The configuration to use for this startup.
-   * @return A future that returns the state of this plugin once started (or throws Exception if the startup failed).
+   * @return A future that returns the state of this plugin once started (or throws Exception if the
+   *     startup failed).
    */
-  private CompletableFuture<SourceState> startAsync(final SourceConfig config, final boolean isDuringStartUp) {
-    // we run this in a separate thread to allow early timeout. This doesn't use the scheduler since that is
+  private CompletableFuture<SourceState> startAsync(
+      final SourceConfig config, final boolean isDuringStartUp) {
+    // we run this in a separate thread to allow early timeout. This doesn't use the scheduler since
+    // that is
     // bound and we're frequently holding a lock when running this.
     return CompletableFuture.supplyAsync(newStartSupplier(config, !isDuringStartUp), executor);
   }
 
   /**
-   * If starting a plugin on process restart failed, this method will spawn a background task that will keep trying
-   * to re-start the plugin on a fixed schedule (minimum of the metadata name and dataset refresh rates)
+   * If starting a plugin on process restart failed, this method will spawn a background task that
+   * will keep trying to re-start the plugin on a fixed schedule (minimum of the metadata name and
+   * dataset refresh rates)
    */
   public void initiateFixFailedStartTask() {
     fixFailedThread.start();
@@ -681,11 +793,12 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   /**
    * Ensures a supplier names the thread it is run on.
+   *
    * @param name Name to use for thread.
    * @param delegate Delegate supplier.
    * @return
    */
-  private <T> Supplier<T> nameSupplier(String name, Supplier<T> delegate){
+  private <T> Supplier<T> nameSupplier(String name, Supplier<T> delegate) {
     return () -> {
       Thread current = Thread.currentThread();
       String oldName = current.getName();
@@ -706,10 +819,15 @@ public class ManagedStoragePlugin implements AutoCloseable {
    * @param attributes
    * @return if table options are modified
    */
-  public boolean alterDataset(final NamespaceKey key, final DatasetConfig datasetConfig,
-                              final Map<String, AttributeValue> attributes) {
-    return alterDatasetInternal(key, datasetConfig, (plugin, handle, oldDatasetMetadata, options) -> plugin.alterMetadata(handle,
-      oldDatasetMetadata, attributes, options));
+  public boolean alterDataset(
+      final NamespaceKey key,
+      final DatasetConfig datasetConfig,
+      final Map<String, AttributeValue> attributes) {
+    return alterDatasetInternal(
+        key,
+        datasetConfig,
+        (plugin, handle, oldDatasetMetadata, options) ->
+            plugin.alterMetadata(handle, oldDatasetMetadata, attributes, options));
   }
 
   /**
@@ -722,18 +840,33 @@ public class ManagedStoragePlugin implements AutoCloseable {
    * @param attributeValue
    * @return if table options are modified
    */
-  public boolean alterDatasetSetColumnOption(final NamespaceKey key, final DatasetConfig datasetConfig, final String columnToChange,
-                                             final String attributeName, final AttributeValue attributeValue) {
-    return alterDatasetInternal(key, datasetConfig, (plugin, handle, oldDatasetMetadata, options) ->
-      plugin.alterDatasetSetColumnOption(handle, oldDatasetMetadata, columnToChange, attributeName, attributeValue, options));
+  public boolean alterDatasetSetColumnOption(
+      final NamespaceKey key,
+      final DatasetConfig datasetConfig,
+      final String columnToChange,
+      final String attributeName,
+      final AttributeValue attributeValue) {
+    return alterDatasetInternal(
+        key,
+        datasetConfig,
+        (plugin, handle, oldDatasetMetadata, options) ->
+            plugin.alterDatasetSetColumnOption(
+                handle,
+                oldDatasetMetadata,
+                columnToChange,
+                attributeName,
+                attributeValue,
+                options));
   }
 
-  private boolean alterDatasetInternal(final NamespaceKey key, final DatasetConfig datasetConfig,
-                                       AlterMetadataCallback pluginCallback) {
+  private boolean alterDatasetInternal(
+      final NamespaceKey key,
+      final DatasetConfig datasetConfig,
+      AlterMetadataCallback pluginCallback) {
     if (!(plugin instanceof SupportsAlteringDatasetMetadata)) {
       throw UserException.unsupportedError()
-        .message("Source [%s] doesn't support modifying options", this.name)
-        .buildSilently();
+          .message("Source [%s] doesn't support modifying options", this.name)
+          .buildSilently();
     }
 
     final DatasetRetrievalOptions retrievalOptions = getDefaultRetrievalOptions();
@@ -742,41 +875,48 @@ public class ManagedStoragePlugin implements AutoCloseable {
       handle = getDatasetHandle(key, datasetConfig, retrievalOptions);
     } catch (ConnectorException e) {
       throw UserException.validationError(e)
-        .message("Failure while retrieving dataset")
-        .buildSilently();
+          .message("Failure while retrieving dataset")
+          .buildSilently();
     }
 
     if (!handle.isPresent()) {
       throw UserException.validationError()
-        .message("Unable to find requested dataset.")
-        .buildSilently();
+          .message("Unable to find requested dataset.")
+          .buildSilently();
     }
 
     if (Boolean.TRUE.equals(datasetConfig.getPhysicalDataset().getIcebergMetadataEnabled())) {
       throw UserException.unsupportedError()
-        .message("ALTER unsupported on table '%s'", key.toString())
-        .buildSilently();
+          .message("ALTER unsupported on table '%s'", key.toString())
+          .buildSilently();
     }
 
     boolean changed = false;
     final DatasetMetadata oldDatasetMetadata = new DatasetMetadataAdapter(datasetConfig);
     DatasetMetadata newDatasetMetadata;
     try (AutoCloseableLock l = readLock()) {
-      newDatasetMetadata = pluginCallback.apply((SupportsAlteringDatasetMetadata) plugin, handle.get(), oldDatasetMetadata);
+      newDatasetMetadata =
+          pluginCallback.apply(
+              (SupportsAlteringDatasetMetadata) plugin, handle.get(), oldDatasetMetadata);
     } catch (ConnectorException e) {
-      throw UserException.validationError(e)
-        .buildSilently();
+      throw UserException.validationError(e).buildSilently();
     }
 
     if (oldDatasetMetadata == newDatasetMetadata) {
       changed = false;
     } else {
-      Preconditions.checkState(newDatasetMetadata.getDatasetStats().getRecordCount() >= 0,
-        "Record count should already be filled in when altering dataset metadata.");
-      MetadataObjectsUtils.overrideExtended(datasetConfig, newDatasetMetadata, Optional.empty(),
-        newDatasetMetadata.getDatasetStats().getRecordCount(), getMaxMetadataColumns());
+      Preconditions.checkState(
+          newDatasetMetadata.getDatasetStats().getRecordCount() >= 0,
+          "Record count should already be filled in when altering dataset metadata.");
+      MetadataObjectsUtils.overrideExtended(
+          datasetConfig,
+          newDatasetMetadata,
+          Optional.empty(),
+          newDatasetMetadata.getDatasetStats().getRecordCount(),
+          getMaxMetadataColumns());
       // Force a full refresh
-      saveDatasetAndMetadataInNamespace(datasetConfig, handle.get(), retrievalOptions.toBuilder().setForceUpdate(true).build());
+      saveDatasetAndMetadataInNamespace(
+          datasetConfig, handle.get(), retrievalOptions.toBuilder().setForceUpdate(true).build());
       changed = true;
     }
     return changed;
@@ -784,8 +924,12 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   @FunctionalInterface
   private interface AlterMetadataCallback {
-    DatasetMetadata apply(SupportsAlteringDatasetMetadata plugin, final DatasetHandle datasetHandle,
-                          final DatasetMetadata metadata, AlterMetadataOption... options) throws ConnectorException;
+    DatasetMetadata apply(
+        SupportsAlteringDatasetMetadata plugin,
+        final DatasetHandle datasetHandle,
+        final DatasetMetadata metadata,
+        AlterMetadataOption... options)
+        throws ConnectorException;
   }
 
   private class FixFailedToStart extends Thread {
@@ -804,7 +948,8 @@ public class ManagedStoragePlugin implements AutoCloseable {
                       metadataPolicy.getNamesRefreshMs(),
                       metadataPolicy.getDatasetDefinitionRefreshAfterMs()),
                   Integer.MAX_VALUE);
-      final Retryer retryer = Retryer.newBuilder()
+      final Retryer retryer =
+          Retryer.newBuilder()
               .retryIfExceptionOfType(BadSourceStateException.class)
               .setWaitStrategy(
                   Retryer.WaitStrategy.EXPONENTIAL,
@@ -816,33 +961,33 @@ public class ManagedStoragePlugin implements AutoCloseable {
       final String successMessage = String.format("Plugin %s started successfully!", name);
       final String errorMessage = String.format("Error while starting plugin %s", name);
       try {
-        retryer.run(() -> {
-          // something started the plugin successfully.
-          if (state.getStatus() != SourceState.SourceStatus.bad) {
-            logger.info(successMessage);
-            return;
-          }
+        retryer.run(
+            () -> {
+              // something started the plugin successfully.
+              if (state.getStatus() != SourceState.SourceStatus.bad) {
+                logger.info(successMessage);
+                return;
+              }
 
-          try {
-            refreshState().get();
-            if (state.getStatus() != SourceState.SourceStatus.bad) {
-              logger.info(successMessage);
-              return;
-            }
-          } catch (Exception e) {
-            // Failure to refresh state means that we should just reschedule the next fix.
-          }
+              try {
+                refreshState().get();
+                if (state.getStatus() != SourceState.SourceStatus.bad) {
+                  logger.info(successMessage);
+                  return;
+                }
+              } catch (Exception e) {
+                // Failure to refresh state means that we should just reschedule the next fix.
+              }
 
-          logger.error(errorMessage);
-          throw new BadSourceStateException();
-        });
+              logger.error(errorMessage);
+              throw new BadSourceStateException();
+            });
       } catch (Retryer.OperationFailedAfterRetriesException e) {
         logger.error(errorMessage, e);
       }
     }
 
-    private final class BadSourceStateException extends RuntimeException {
-    }
+    private final class BadSourceStateException extends RuntimeException {}
 
     @Override
     public String toString() {
@@ -850,20 +995,21 @@ public class ManagedStoragePlugin implements AutoCloseable {
     }
   }
 
-  /**
-   * Before doing any operation associated with plugin, we should check the state of the plugin.
-   */
+  /** Before doing any operation associated with plugin, we should check the state of the plugin. */
   protected void checkState() {
-    try(AutoCloseableLock l = readLock()) {
+    try (AutoCloseableLock l = readLock()) {
       SourceState state = this.state;
-      if(state.getStatus() == SourceState.SourceStatus.bad) {
-        final String msg = state.getMessages().stream()
-          .map(m -> m.getMessage())
-          .collect(Collectors.joining(", "));
+      if (state.getStatus() == SourceState.SourceStatus.bad) {
+        final String msg =
+            state.getMessages().stream().map(m -> m.getMessage()).collect(Collectors.joining(", "));
 
         StringBuilder badStateMessage = new StringBuilder();
-        badStateMessage.append("The source [").append(sourceKey).append("] is currently unavailable. Metadata is not ");
-        badStateMessage.append("accessible; please check node health (or external storage) and permissions.");
+        badStateMessage
+            .append("The source [")
+            .append(sourceKey)
+            .append("] is currently unavailable. Metadata is not ");
+        badStateMessage.append(
+            "accessible; please check node health (or external storage) and permissions.");
         if (!Strings.isNullOrEmpty(msg)) {
           badStateMessage.append(" Info: [").append(msg).append("]");
         }
@@ -871,9 +1017,10 @@ public class ManagedStoragePlugin implements AutoCloseable {
         if (!Strings.isNullOrEmpty(suggestedUserAction)) {
           badStateMessage.append("\nAdditional actions: [").append(suggestedUserAction).append("]");
         }
-        UserException.Builder builder = UserException.sourceInBadState().message(badStateMessage.toString());
+        UserException.Builder builder =
+            UserException.sourceInBadState().message(badStateMessage.toString());
 
-        for(Message message : state.getMessages()) {
+        for (Message message : state.getMessages()) {
           builder.addContext(message.getLevel().name(), message.getMessage());
         }
 
@@ -915,18 +1062,37 @@ public class ManagedStoragePlugin implements AutoCloseable {
   }
 
   @WithSpan("check-dataset-access")
-  public void checkAccess(NamespaceKey key, DatasetConfig datasetConfig, String userName, final MetadataRequestOptions options) {
+  public void checkAccess(
+      NamespaceKey key,
+      DatasetConfig datasetConfig,
+      String userName,
+      final MetadataRequestOptions options) {
     if (SystemUser.isSystemUserName(userName)) {
       return;
     }
 
-    try(AutoCloseableLock l = readLock()) {
+    try (AutoCloseableLock l = readLock()) {
       checkState();
-      if (!getPermissionsCache().hasAccess(userName, key, datasetConfig, options.getStatsCollector(), sourceConfig)) {
+      if (!getPermissionsCache()
+          .hasAccess(userName, key, datasetConfig, options.getStatsCollector(), sourceConfig)) {
         throw UserException.permissionError()
-          .message("Access denied reading dataset %s.", key)
-          .build(logger);
+            .message("Access denied reading dataset %s.", key)
+            .build(logger);
       }
+    }
+  }
+
+  /** Gets the current state of the metadata maintained by {@link SourceMetadataManager}. */
+  public DatasetMetadataState getDatasetMetadataState(DatasetConfig datasetConfig) {
+    try (AutoCloseableLock l = readLock()) {
+      checkState();
+      boolean isComplete = isComplete(datasetConfig);
+      return isComplete
+          ? DatasetMetadataState.builder()
+              .from(metadataManager.getDatasetMetadataState(datasetConfig, plugin))
+              .setIsComplete(true)
+              .build()
+          : DatasetMetadataState.builder().setIsComplete(false).setIsExpired(true).build();
     }
   }
 
@@ -938,13 +1104,38 @@ public class ManagedStoragePlugin implements AutoCloseable {
    * @return true iff the metadata is complete and meets validity constraints
    */
   @WithSpan
-  public boolean isCompleteAndValid(DatasetConfig datasetConfig, MetadataRequestOptions requestOptions) {
+  public boolean checkValidity(DatasetConfig datasetConfig, MetadataRequestOptions requestOptions) {
     try (AutoCloseableLock l = readLock()) {
       checkState();
-      final boolean checkValidity = requestOptions.checkValidity() && !getConfig().getDisableMetadataValidityCheck();
-      return isComplete(datasetConfig) &&
-        metadataManager.isStillValid(ImmutableMetadataRequestOptions.copyOf(requestOptions)
-          .withCheckValidity(checkValidity), datasetConfig, this.unwrap(StoragePlugin.class));
+
+      // Check for validity can be overridden per source or per request.
+      // Bypassing validity check means we consider metadata valid.
+      requestOptions =
+          ImmutableMetadataRequestOptions.copyOf(requestOptions)
+              .withCheckValidity(
+                  requestOptions.checkValidity() && !getConfig().getDisableMetadataValidityCheck());
+
+      boolean isComplete = isComplete(datasetConfig);
+      boolean isStillValid = false;
+      if (!isComplete) {
+        logger.info(
+            "Dataset [{}] has incomplete metadata.",
+            datasetConfig == null || datasetConfig.getFullPathList() == null
+                ? "Unknown"
+                : new NamespaceKey(datasetConfig.getFullPathList()));
+      } else {
+        isStillValid =
+            metadataManager.isStillValid(
+                requestOptions, datasetConfig, this.unwrap(StoragePlugin.class));
+        if (!isStillValid) {
+          logger.info(
+              "Dataset [{}] has complete metadata but not valid any more.",
+              new NamespaceKey(datasetConfig.getFullPathList()));
+        }
+      }
+
+      // Whether metadata is complete and considered up-to-date.
+      return isComplete && isStillValid;
     }
   }
 
@@ -953,39 +1144,42 @@ public class ManagedStoragePlugin implements AutoCloseable {
     try {
       return metadataManager.refreshDataset(key, retrievalOptions);
     } catch (StoragePluginChanging e) {
-      throw UserException.validationError(e).message("Storage plugin was changing during refresh attempt.").build(logger);
+      throw UserException.validationError(e)
+          .message("Storage plugin was changing during refresh attempt.")
+          .build(logger);
     } catch (ConnectorException | NamespaceException e) {
-      throw UserException.validationError(e).message("Unable to refresh dataset. %s", e.getMessage()).build(logger);
+      throw UserException.validationError(e)
+          .message("Unable to refresh dataset. %s", e.getMessage())
+          .build(logger);
     }
   }
 
-  public void saveDatasetAndMetadataInNamespace(DatasetConfig datasetConfig,
-                                                DatasetHandle datasetHandle,
-                                                DatasetRetrievalOptions retrievalOptions
-  ) {
+  public void saveDatasetAndMetadataInNamespace(
+      DatasetConfig datasetConfig,
+      DatasetHandle datasetHandle,
+      DatasetRetrievalOptions retrievalOptions) {
     checkState();
     try {
-      metadataManager.saveDatasetAndMetadataInNamespace(datasetConfig, datasetHandle, retrievalOptions);
+      metadataManager.saveDatasetAndMetadataInNamespace(
+          datasetConfig, datasetHandle, retrievalOptions);
     } catch (StoragePluginChanging e) {
       throw UserException.validationError(e)
-        .message("Storage plugin was changing during dataset update attempt.")
-        .build(logger);
+          .message("Storage plugin was changing during dataset update attempt.")
+          .build(logger);
     } catch (ConnectorException e) {
-      throw UserException.validationError(e)
-        .message("Unable to update dataset.")
-        .build(logger);
+      throw UserException.validationError(e).message("Unable to update dataset.").build(logger);
     }
   }
 
   public DatasetConfig getUpdatedDatasetConfig(DatasetConfig oldConfig, BatchSchema newSchema) {
-    try(AutoCloseableLock l = readLock()) {
+    try (AutoCloseableLock l = readLock()) {
       checkState();
       return plugin.createDatasetConfigFromSchema(oldConfig, newSchema);
     }
   }
 
   public ViewTable getView(NamespaceKey key, final MetadataRequestOptions options) {
-    try(AutoCloseableLock l = readLock()) {
+    try (AutoCloseableLock l = readLock()) {
       checkState();
       // TODO: move views to namespace and out of filesystem.
       return plugin.getView(key.getPathComponents(), options.getSchemaConfig());
@@ -994,28 +1188,29 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   @WithSpan("get-dataset-handle")
   public Optional<DatasetHandle> getDatasetHandle(
-      NamespaceKey key,
-      DatasetConfig datasetConfig,
-      DatasetRetrievalOptions retrievalOptions
-  ) throws ConnectorException {
+      NamespaceKey key, DatasetConfig datasetConfig, DatasetRetrievalOptions retrievalOptions)
+      throws ConnectorException {
     try (AutoCloseableLock ignored = readLock()) {
       checkState();
       final EntityPath entityPath;
-      if(datasetConfig != null) {
+      if (datasetConfig != null) {
         entityPath = new EntityPath(datasetConfig.getFullPathList());
       } else {
         entityPath = MetadataObjectsUtils.toEntityPath(key);
       }
 
       // include the full path of the dataset
-      Span.current().setAttribute("dremio.dataset.path", PathUtils.constructFullPath(entityPath.getComponents()));
-      return plugin.getDatasetHandle(entityPath,
-          retrievalOptions.asGetDatasetOptions(datasetConfig));
+      Span.current()
+          .setAttribute(
+              "dremio.dataset.path", PathUtils.constructFullPath(entityPath.getComponents()));
+      return plugin.getDatasetHandle(
+          entityPath, retrievalOptions.asGetDatasetOptions(datasetConfig));
     }
   }
 
   /**
    * Call after plugin start to register local variables.
+   *
    * @param config
    */
   private void setLocals(SourceConfig config) {
@@ -1028,6 +1223,7 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   /**
    * Reset the plugin locals to the state before the plugin was started.
+   *
    * @param config the original source configuration, must be not-null
    * @param pluginId the id of the plugin before startup
    */
@@ -1041,80 +1237,91 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   /**
    * Helper function to set the plugin locals.
+   *
    * @param config source config, must be not null
    */
   private void initPlugin(SourceConfig config) {
     this.sourceConfig = config;
-    this.metadataPolicy = config.getMetadataPolicy() == null? CatalogService.NEVER_REFRESH_POLICY : config.getMetadataPolicy();
+    this.metadataPolicy =
+        config.getMetadataPolicy() == null
+            ? CatalogService.NEVER_REFRESH_POLICY
+            : config.getMetadataPolicy();
     this.state = getPlugin().getState();
     this.conf = config.getConnectionConf(reader);
-    this.resolvedConf = resolveConnectionConf(getConnectionConf());
   }
 
-  /**
-   * Update the cached state of the plugin.
-   *
-   */
+  /** Update the cached state of the plugin. */
   public CompletableFuture<SourceState> refreshState() throws Exception {
-    return CompletableFuture
-    .supplyAsync(() -> {
-      try {
-        Optional<AutoCloseableLock> refreshLock = AutoCloseableLock.of(this.refreshStateLock, true).tryOpen(0, TimeUnit.SECONDS);
-        if (!refreshLock.isPresent()) {
-          return state;
-        }
-        try (AutoCloseableLock rl = refreshLock.get()) {
-          while (true) {
-            if (plugin == null) {
-              Optional<AutoCloseableLock> writeLock = AutoCloseableLock.of(this.writeLock, true).tryOpen(5, TimeUnit.SECONDS);
-              if (!writeLock.isPresent()) {
-                return state;
-              }
+    return CompletableFuture.supplyAsync(
+        () -> {
+          try {
+            Optional<AutoCloseableLock> refreshLock =
+                AutoCloseableLock.of(this.refreshStateLock, true).tryOpen(0, TimeUnit.SECONDS);
+            if (!refreshLock.isPresent()) {
+              return state;
+            }
+            try (AutoCloseableLock rl = refreshLock.get()) {
+              while (true) {
+                if (plugin == null) {
+                  Optional<AutoCloseableLock> writeLock =
+                      AutoCloseableLock.of(this.writeLock, true).tryOpen(5, TimeUnit.SECONDS);
+                  if (!writeLock.isPresent()) {
+                    return state;
+                  }
 
-              try (AutoCloseableLock l = writeLock.get()) {
-                if (plugin != null) {
-                  // while waiting for write lock, someone else started things, start this loop over.
-                  continue;
+                  try (AutoCloseableLock l = writeLock.get()) {
+                    if (plugin != null) {
+                      // while waiting for write lock, someone else started things, start this loop
+                      // over.
+                      continue;
+                    }
+                    plugin =
+                        resolveConnectionConf(conf)
+                            .newPlugin(context, sourceConfig.getName(), this::getId);
+                    return newStartSupplier(sourceConfig, false).get();
+                  }
                 }
-                plugin = resolvedConf.newPlugin(context, sourceConfig.getName(), this::getId);
-                return newStartSupplier(sourceConfig, false).get();
+
+                // the plugin is not null.
+                Optional<AutoCloseableLock> readLock =
+                    AutoCloseableLock.of(this.readLock, true).tryOpen(1, TimeUnit.SECONDS);
+                if (!readLock.isPresent()) {
+                  return state;
+                }
+
+                try (Closeable a = readLock.get()) {
+                  final SourceState state = plugin.getState();
+                  this.state = state;
+                  return state;
+                }
               }
             }
-
-            // the plugin is not null.
-            Optional<AutoCloseableLock> readLock = AutoCloseableLock.of(this.readLock, true).tryOpen(1, TimeUnit.SECONDS);
-            if (!readLock.isPresent()) {
-              return state;
-            }
-
-            try (Closeable a = readLock.get()) {
-              final SourceState state = plugin.getState();
-              this.state = state;
-              return state;
-            }
+          } catch (Exception ex) {
+            logger.debug("Failed to start plugin while trying to refresh state, error:", ex);
+            this.state = SourceState.NOT_AVAILABLE;
+            return SourceState.NOT_AVAILABLE;
           }
-        }
-      } catch (Exception ex) {
-        logger.debug("Failed to start plugin while trying to refresh state, error:", ex);
-        this.state = SourceState.NOT_AVAILABLE;
-        return SourceState.NOT_AVAILABLE;
-      }
-    }, executor);
+        },
+        executor);
   }
 
-  boolean replacePluginWithLock(SourceConfig config, final long waitMillis, boolean skipEqualityCheck) throws Exception {
-    try(Closeable write = writeLock()) {
+  boolean replacePluginWithLock(
+      SourceConfig config, final long waitMillis, boolean skipEqualityCheck) throws Exception {
+    try (Closeable write = writeLock()) {
       return replacePlugin(config, waitMillis, skipEqualityCheck);
     }
   }
 
   private boolean sourceConfigDiffersTagAlone(SourceConfig theirs) {
-    byte[] bytesOurs = ProtostuffIOUtil.toByteArray(this.sourceConfig, SourceConfig.getSchema(), LinkedBuffer.allocate());
+    byte[] bytesOurs =
+        ProtostuffIOUtil.toByteArray(
+            this.sourceConfig, SourceConfig.getSchema(), LinkedBuffer.allocate());
     SourceConfig oursNoTag = new SourceConfig();
     ProtostuffIOUtil.mergeFrom(bytesOurs, oursNoTag, SourceConfig.getSchema());
     oursNoTag.setTag(null);
 
-    byte[] bytesTheirs = ProtostuffIOUtil.toByteArray(theirs, SourceConfig.getSchema(), LinkedBuffer.allocate());
+    byte[] bytesTheirs =
+        ProtostuffIOUtil.toByteArray(theirs, SourceConfig.getSchema(), LinkedBuffer.allocate());
     SourceConfig theirsNoTag = new SourceConfig();
     ProtostuffIOUtil.mergeFrom(bytesTheirs, theirsNoTag, SourceConfig.getSchema());
     theirsNoTag.setTag(null);
@@ -1123,24 +1330,27 @@ public class ManagedStoragePlugin implements AutoCloseable {
   }
 
   /**
-   * Replace the plugin instance with one defined by the new SourceConfig. Do the minimal
-   * changes necessary. Starts the new plugin.
+   * Replace the plugin instance with one defined by the new SourceConfig. Do the minimal changes
+   * necessary. Starts the new plugin.
    *
    * @param config
    * @param waitMillis
    * @return Whether metadata was maintained. Metdata will be maintained if the connection did not
-   *         change or was changed with only non-metadata impacting changes.
+   *     change or was changed with only non-metadata impacting changes.
    * @throws Exception
    */
-  private boolean replacePlugin(SourceConfig config, final long waitMillis, boolean skipEqualityCheck) throws Exception {
-    Preconditions.checkState(writeLock.isHeldByCurrentThread(), "You must hold the plugin write lock before replacing plugin.");
+  private boolean replacePlugin(
+      SourceConfig config, final long waitMillis, boolean skipEqualityCheck) throws Exception {
+    Preconditions.checkState(
+        writeLock.isHeldByCurrentThread(),
+        "You must hold the plugin write lock before replacing plugin.");
 
     final ConnectionConf<?, ?> existingConnectionConf = this.conf;
     final ConnectionConf<?, ?> newConnectionConf = reader.getConnectionConf(config);
     /* if the plugin startup had failed earlier (plugin is null) and
      * we are here to replace the plugin, we should not return here.
      */
-    if(!skipEqualityCheck && existingConnectionConf.equals(newConnectionConf) && plugin != null) {
+    if (!skipEqualityCheck && existingConnectionConf.equals(newConnectionConf) && plugin != null) {
       // we just need to update external settings.
       setLocals(config);
       return true;
@@ -1158,14 +1368,15 @@ public class ManagedStoragePlugin implements AutoCloseable {
     final SourceConfig oldConfig = sourceConfig;
     final StoragePlugin oldPlugin = plugin;
     final StoragePluginId oldPluginId = pluginId;
-    final ConnectionConf<?, ?> resolvedNewConnectionConf = resolveConnectionConf(newConnectionConf);
-    this.plugin = resolvedNewConnectionConf.newPlugin(context, sourceKey.getRoot(), this::getId, influxSourcePred);
+    this.plugin =
+        resolveConnectionConf(newConnectionConf)
+            .newPlugin(context, sourceKey.getRoot(), this::getId, influxSourcePred);
     try {
       logger.trace("Starting new plugin for [{}]", config.getName());
       startAsync(config, false).get(waitMillis, TimeUnit.MILLISECONDS);
       try {
         AutoCloseables.close(oldPlugin);
-      }catch(Exception ex) {
+      } catch (Exception ex) {
         logger.warn("Failure while retiring old plugin [{}].", sourceKey, ex);
       }
 
@@ -1173,7 +1384,7 @@ public class ManagedStoragePlugin implements AutoCloseable {
       getPermissionsCache().clear();
 
       return existingConnectionConf.equalsIgnoringNotMetadataImpacting(newConnectionConf);
-    } catch(Exception ex) {
+    } catch (Exception ex) {
       // the update failed, go back to previous state.
       this.plugin = oldPlugin;
       try {
@@ -1187,7 +1398,7 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   boolean isSourceConfigMetadataImpacting(SourceConfig config) {
     final ConnectionConf<?, ?> newConnectionConf = reader.getConnectionConf(config);
-    try(AutoCloseableLock l = readLock()) {
+    try (AutoCloseableLock l = readLock()) {
       return !conf.equalsIgnoringNotMetadataImpacting(newConnectionConf);
     }
   }
@@ -1199,17 +1410,20 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   /**
    * Close this storage plugin if it matches the provided configuration
+   *
    * @param config
    * @return
    * @throws Exception
    */
-  public boolean close(SourceConfig config, Consumer<ManagedStoragePlugin> runUnderLock) throws Exception {
-    try(AutoCloseableLock l = writeLock()) {
+  public boolean close(SourceConfig config, Consumer<ManagedStoragePlugin> runUnderLock)
+      throws Exception {
+    try (AutoCloseableLock l = writeLock()) {
 
-      // it's possible that the delete is newer than the current version of the plugin. If versions inconsistent,
+      // it's possible that the delete is newer than the current version of the plugin. If versions
+      // inconsistent,
       // synchronize before attempting to match.
-      if(config != null) {
-        if(!config.getTag().equals(sourceConfig.getTag())) {
+      if (config != null) {
+        if (!config.getTag().equals(sourceConfig.getTag())) {
           try {
             synchronizeSource(config);
           } catch (Exception ex) {
@@ -1217,7 +1431,7 @@ public class ManagedStoragePlugin implements AutoCloseable {
           }
         }
 
-        if(!matches(config)) {
+        if (!matches(config)) {
           return false;
         }
       }
@@ -1244,27 +1458,28 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
   @SuppressWarnings("unchecked")
   public <T extends StoragePlugin> T unwrap(Class<T> clazz) {
-    try(AutoCloseableLock l = readLock()) {
+    try (AutoCloseableLock l = readLock()) {
       checkState();
-      if(clazz.isAssignableFrom(plugin.getClass())) {
+      if (clazz.isAssignableFrom(plugin.getClass())) {
         return (T) plugin;
       }
     }
     return null;
   }
 
-  private static final Comparator<SourceConfig> SOURCE_CONFIG_COMPARATOR = (s1, s2) -> {
-    if (s2.getConfigOrdinal() == null) {
-      if (s1.getConfigOrdinal() == null) {
-        return 0;
-      }
-      return 1;
-    } else if (s1.getConfigOrdinal() == null) {
-      return -1;
-    } else {
-      return Long.compare(s1.getConfigOrdinal(), s2.getConfigOrdinal());
-    }
-  };
+  private static final Comparator<SourceConfig> SOURCE_CONFIG_COMPARATOR =
+      (s1, s2) -> {
+        if (s2.getConfigOrdinal() == null) {
+          if (s1.getConfigOrdinal() == null) {
+            return 0;
+          }
+          return 1;
+        } else if (s1.getConfigOrdinal() == null) {
+          return -1;
+        } else {
+          return Long.compare(s1.getConfigOrdinal(), s2.getConfigOrdinal());
+        }
+      };
 
   interface SupplierWithEX<T, EX extends Throwable> {
     T get() throws EX;
@@ -1274,16 +1489,15 @@ public class ManagedStoragePlugin implements AutoCloseable {
     void run() throws EX;
   }
 
-
   private AutoCloseableLock tryReadLock() {
 
     // if the plugin was closed, we should always fail.
-    if(closed) {
+    if (closed) {
       throw new StoragePluginChanging(name + ": Plugin was closed.");
     }
 
     boolean locked = readLock.tryLock();
-    if(!locked) {
+    if (!locked) {
       throw new StoragePluginChanging(name + ": Plugin is actively undergoing changes.");
     }
 
@@ -1296,19 +1510,20 @@ public class ManagedStoragePlugin implements AutoCloseable {
     public StoragePluginChanging(String message) {
       super(message);
     }
-
   }
 
   /**
-   * Ensures that all namespace operations are under a read lock to avoid issues where a plugin starts changing and then
-   * we write to the namespace. If a safe run operation can't aquire the read lock, we will throw a
-   * StoragePluginChanging exception. It will also throw if it was created against an older version of the plugin.
+   * Ensures that all namespace operations are under a read lock to avoid issues where a plugin
+   * starts changing and then we write to the namespace. If a safe run operation can't aquire the
+   * read lock, we will throw a StoragePluginChanging exception. It will also throw if it was
+   * created against an older version of the plugin.
    *
-   * This runner is snapshot based. When it is initialized, it will record the current tag of the source configuration.
-   * If the tag changes, it will disallow future operations, even if the lock becomes available. This ensures that if
-   * there are weird timing where an edit happens fast enough such that a metadata refresh doesn't naturally hit the
-   * safe runner, it will still not be able to do any metastore modifications (just in case the plugin change required a
-   * catalog deletion).
+   * <p>This runner is snapshot based. When it is initialized, it will record the current tag of the
+   * source configuration. If the tag changes, it will disallow future operations, even if the lock
+   * becomes available. This ensures that if there are weird timing where an edit happens fast
+   * enough such that a metadata refresh doesn't naturally hit the safe runner, it will still not be
+   * able to do any metastore modifications (just in case the plugin change required a catalog
+   * deletion).
    */
   class SafeRunner {
 
@@ -1316,72 +1531,80 @@ public class ManagedStoragePlugin implements AutoCloseable {
 
     private AutoCloseableLock tryReadLock() {
       // make sure we don't expose the read lock for a now out of date SafeRunner.
-      if(!Objects.equals(sourceConfig.getTag(), configTag)) {
+      if (!Objects.equals(sourceConfig.getTag(), configTag)) {
         throw new StoragePluginChanging(name + ": Plugin tag has changed since refresh started.");
       }
       return ManagedStoragePlugin.this.tryReadLock();
-
     }
 
     public <EX extends Throwable> void doSafe(RunnableWithEX<EX> runnable) throws EX {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         runnable.run();
       }
     }
 
     public <T, EX extends Throwable> T doSafe(SupplierWithEX<T, EX> supplier) throws EX {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return supplier.get();
       }
     }
 
-    public <I, T extends Iterable<I>, EX extends Throwable> Iterable<I> doSafeIterable(SupplierWithEX<T, EX> supplier) throws EX {
-      try(AutoCloseableLock read = tryReadLock()) {
+    public <I, T extends Iterable<I>, EX extends Throwable> Iterable<I> doSafeIterable(
+        SupplierWithEX<T, EX> supplier) throws EX {
+      try (AutoCloseableLock read = tryReadLock()) {
         final Iterable<I> innerIterable = supplier.get();
         return () -> wrapIterator(innerIterable.iterator());
       }
     }
 
-    public <I, EX extends Throwable> Iterator<I> wrapIterator(final Iterator<I> innerIterator) throws EX {
+    public <I, EX extends Throwable> Iterator<I> wrapIterator(final Iterator<I> innerIterator)
+        throws EX {
       return new Iterator<I>() {
         @Override
         public boolean hasNext() {
-          return SafeRunner.this.doSafe(() -> {return innerIterator.hasNext();});
+          return SafeRunner.this.doSafe(
+              () -> {
+                return innerIterator.hasNext();
+              });
         }
 
         @Override
         public I next() {
           return doSafe(() -> innerIterator.next());
-        }};
+        }
+      };
     }
   }
 
   /**
-   * A class that provides a lock protected bridge between the source metadata manager and the ManagedStoragePlugin so
-   * the manager can't cause problems with plugin locking.
+   * A class that provides a lock protected bridge between the source metadata manager and the
+   * ManagedStoragePlugin so the manager can't cause problems with plugin locking.
    */
   class MetadataBridge {
     SourceMetadata getMetadata() {
-      try(AutoCloseableLock read = tryReadLock()) {
-        if(plugin == null) {
+      try (AutoCloseableLock read = tryReadLock()) {
+        if (plugin == null) {
           return null;
         }
 
-        // note that we don't protect the methods inside this. This could possibly cause a weird metadata exception if
-        // the source is changing while a dataset is being refreshed. This was previously possible with an inline
-        // refresh but not a background refresh. With this pattern, it can also happen with a background refresh.
+        // note that we don't protect the methods inside this. This could possibly cause a weird
+        // metadata exception if
+        // the source is changing while a dataset is being refreshed. This was previously possible
+        // with an inline
+        // refresh but not a background refresh. With this pattern, it can also happen with a
+        // background refresh.
         return plugin;
       }
     }
 
     DatasetRetrievalOptions getDefaultRetrievalOptions() {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return ManagedStoragePlugin.this.getDefaultRetrievalOptions();
       }
     }
 
     public NamespaceService getNamespaceService() {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return new SafeNamespaceService(systemUserNamespaceService, new SafeRunner());
       }
     }
@@ -1391,19 +1614,19 @@ public class ManagedStoragePlugin implements AutoCloseable {
     }
 
     public MetadataPolicy getMetadataPolicy() {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return metadataPolicy;
       }
     }
 
     int getMaxMetadataColumns() {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return Ints.saturatedCast(options.getOption(CatalogOptions.METADATA_LEAF_COLUMN_MAX));
       }
     }
 
     int getMaxNestedLevels() {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return Ints.saturatedCast(options.getOption(CatalogOptions.MAX_NESTED_LEVELS));
       }
     }
@@ -1413,11 +1636,9 @@ public class ManagedStoragePlugin implements AutoCloseable {
     }
 
     SourceState getState() {
-      try(AutoCloseableLock read = tryReadLock()) {
+      try (AutoCloseableLock read = tryReadLock()) {
         return state;
       }
     }
-
   }
-
 }
