@@ -15,17 +15,6 @@
  */
 package com.dremio.sabot.op.join.nlje;
 
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-
-import org.apache.arrow.vector.FieldVector;
-import org.apache.arrow.vector.ValueVector;
-import org.apache.arrow.vector.util.TransferPair;
-import org.apache.calcite.rel.core.JoinRelType;
-
 import com.dremio.common.AutoCloseables;
 import com.dremio.common.exceptions.UserException;
 import com.dremio.common.expression.FunctionCall;
@@ -44,27 +33,43 @@ import com.dremio.sabot.op.copier.CopierFactory;
 import com.dremio.sabot.op.spi.DualInputOperator;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Stopwatch;
+import com.google.common.base.Throwables;
 import com.google.common.collect.ImmutableMap;
+import java.lang.reflect.InvocationTargetException;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+import org.apache.arrow.vector.FieldVector;
+import org.apache.arrow.vector.ValueVector;
+import org.apache.arrow.vector.util.TransferPair;
+import org.apache.calcite.rel.core.JoinRelType;
 
 /**
  * An enhanced implementation of NLJ that is vectorized and supports evaluating an expression.
  *
- * The algorithm is as follows:
- * <ul>
- * <li>Collect all the build batches in memory in an ExpandableHyperContainer
- * <li>Once collected, generate a JoinMatcher. There are two implementations: a generalized one and one for when we are doing a left join (probe non-matching) with no build input.
- * <li>For each input probe batch, we generate a two sets of selection vectors. A SV2 for the probe input and a SV4 for the build input.
- * <li>For each build batch, we generate the list of outputs. Because this list could be n^2 in size, we do this a partial probe batch at a time.
- * </ul>
+ * <p>The algorithm is as follows:
  *
+ * <ul>
+ *   <li>Collect all the build batches in memory in an ExpandableHyperContainer
+ *   <li>Once collected, generate a JoinMatcher. There are two implementations: a generalized one
+ *       and one for when we are doing a left join (probe non-matching) with no build input.
+ *   <li>For each input probe batch, we generate a two sets of selection vectors. A SV2 for the
+ *       probe input and a SV4 for the build input.
+ *   <li>For each build batch, we generate the list of outputs. Because this list could be n^2 in
+ *       size, we do this a partial probe batch at a time.
+ * </ul>
  */
 public class NLJEOperator implements DualInputOperator {
 
-  //TODO: remove static map.
-  private static final Map<String, String> VECTOR_MAP = ImmutableMap.<String, String>builder()
-      .put("geo_nearby", "com.dremio.joust.geo.NearbyBeyond")
-      .put("geo_beyond", "com.dremio.joust.geo.NearbyBeyond")
-      .put("all", "com.dremio.sabot.op.join.nlje.AllVectorFunction").build();
+  // TODO: remove static map.
+  private static final Map<String, String> VECTOR_MAP =
+      ImmutableMap.<String, String>builder()
+          .put("geo_nearby", "com.dremio.joust.geo.NearbyBeyond")
+          .put("geo_beyond", "com.dremio.joust.geo.NearbyBeyond")
+          .put("all", "com.dremio.sabot.op.join.nlje.AllVectorFunction")
+          .build();
 
   private final OperatorContext context;
   private final JoinRelType joinType;
@@ -91,24 +96,30 @@ public class NLJEOperator implements DualInputOperator {
     this.context = context;
     this.config = config;
     this.joinType = config.getJoinType();
-    switch(joinType) {
-    case INNER:
-    case LEFT:
-      break; // supported.
-    case FULL:
-      LogicalExpression condition = config.getCondition();
-      if(condition instanceof BooleanExpression && ((BooleanExpression)condition).getBoolean()){
-        // DX-59222 support FOJ with true condition
-        break;
-      }
-      throw UserException.unsupportedError().message("When using NLJ, we only support full outer joins with a 'true' condition.").buildSilently();
-    default:
-      throw UserException.unsupportedError().message("Joins of type %s using NLJ are not currently supported.", joinType.name()).buildSilently();
+    switch (joinType) {
+      case INNER:
+      case LEFT:
+        break; // supported.
+      case FULL:
+        LogicalExpression condition = config.getCondition();
+        if (condition instanceof BooleanExpression
+            && ((BooleanExpression) condition).getBoolean()) {
+          // DX-59222 support FOJ with true condition
+          break;
+        }
+        throw UserException.unsupportedError()
+            .message("When using NLJ, we only support full outer joins with a 'true' condition.")
+            .buildSilently();
+      default:
+        throw UserException.unsupportedError()
+            .message("Joins of type %s using NLJ are not currently supported.", joinType.name())
+            .buildSilently();
     }
   }
 
   @Override
-  public <OUT, IN, EXCEP extends Throwable> OUT accept(OperatorVisitor<OUT, IN, EXCEP> visitor, IN value) throws EXCEP {
+  public <OUT, IN, EXCEP extends Throwable> OUT accept(
+      OperatorVisitor<OUT, IN, EXCEP> visitor, IN value) throws EXCEP {
     return visitor.visitDualInput(this, value);
   }
 
@@ -125,19 +136,30 @@ public class NLJEOperator implements DualInputOperator {
     this.build = new ExpandableHyperContainer(context.getAllocator(), right.getSchema());
     this.output = new VectorContainer();
 
-    List<FieldVector> buildIncomingVectors = (List<FieldVector>) StreamSupport.stream(buildIncoming.spliterator(), false).map(VectorWrapper::getValueVector).collect(Collectors.toList());
-    buildOutputVectors = buildIncomingVectors.stream()
-      .map(v -> (FieldVector) v.getTransferPair(context.getAllocator()).getTo())
-      .collect(Collectors.toList());
+    List<FieldVector> buildIncomingVectors =
+        (List<FieldVector>)
+            StreamSupport.stream(buildIncoming.spliterator(), false)
+                .map(VectorWrapper::getValueVector)
+                .collect(Collectors.toList());
+    buildOutputVectors =
+        buildIncomingVectors.stream()
+            .map(v -> (FieldVector) v.getTransferPair(v.getField(), context.getAllocator()).getTo())
+            .collect(Collectors.toList());
     buildOutputVectors.forEach(v -> output.add(v));
 
-    probeInputVectors = (List<FieldVector>) StreamSupport.stream(probeIncoming.spliterator(), false).map(VectorWrapper::getValueVector).collect(Collectors.toList());
-    probeOutputTransfers = probeInputVectors.stream()
-      .map(v -> v.getTransferPair(context.getAllocator()))
-      .collect(Collectors.toList());
-    probeOutputVectors = probeOutputTransfers.stream()
-      .map(v -> (FieldVector) v.getTo())
-      .collect(Collectors.toList());
+    probeInputVectors =
+        (List<FieldVector>)
+            StreamSupport.stream(probeIncoming.spliterator(), false)
+                .map(VectorWrapper::getValueVector)
+                .collect(Collectors.toList());
+    probeOutputTransfers =
+        probeInputVectors.stream()
+            .map(v -> v.getTransferPair(v.getField(), context.getAllocator()))
+            .collect(Collectors.toList());
+    probeOutputVectors =
+        probeOutputTransfers.stream()
+            .map(v -> (FieldVector) v.getTo())
+            .collect(Collectors.toList());
     probeOutputVectors.forEach(v -> output.add(v));
 
     this.output.buildSchema();
@@ -156,60 +178,87 @@ public class NLJEOperator implements DualInputOperator {
   @Override
   public void consumeDataRight(int records) throws Exception {
     final RecordBatchData batchCopy = new RecordBatchData(buildIncoming, context.getAllocator());
-    build.addBatch(batchCopy.getContainer());
+    build.addBatch(batchCopy.getVectorAccessible());
     buildRecords += records;
   }
 
   private DualRange getInitialMatchState() throws Exception {
-    final int targetGenerateAtOnce = (int) context.getOptions().getOption(NestedLoopJoinPrel.OUTPUT_COUNT);
+    final int targetGenerateAtOnce =
+        (int) context.getOptions().getOption(NestedLoopJoinPrel.OUTPUT_COUNT);
     VectorWrapper<?> wrapper = build.iterator().next();
     ValueVector[] vectors = wrapper.getValueVectors();
     int[] counts = new int[vectors.length];
     int maxBuildCount = 0;
-    for(int i = 0; i < vectors.length; i++) {
+    for (int i = 0; i < vectors.length; i++) {
       counts[i] = vectors[i].getValueCount();
       maxBuildCount = Math.max(maxBuildCount, counts[i]);
     }
-    if(config.getVectorOp() == null) {
+    if (config.getVectorOp() == null) {
       return new IndexRange(targetGenerateAtOnce, counts);
     } else {
       return getVectorRange((FunctionCall) config.getVectorOp(), targetGenerateAtOnce, counts);
     }
   }
 
-  private DualRange getVectorRange(FunctionCall expression, int targetGenerateAtOnce, int[] batchCounts) throws Exception {
+  private DualRange getVectorRange(
+      FunctionCall expression, int targetGenerateAtOnce, int[] batchCounts) throws Exception {
     String factoryName = VECTOR_MAP.get(expression.getName());
-    if(factoryName == null) {
+    if (factoryName == null) {
       throw new UnsupportedOperationException("Unknown vector operation " + expression.getName());
     }
 
-    DualRangeFunctionFactory factory = (DualRangeFunctionFactory) Class.forName(factoryName).newInstance();
-    return factory.create(context.getAllocator(), probeIncoming, build, context.getTargetBatchSize(), targetGenerateAtOnce, batchCounts, expression);
+    DualRangeFunctionFactory factory;
+    try {
+      factory =
+          (DualRangeFunctionFactory)
+              Class.forName(factoryName).getDeclaredConstructor().newInstance();
+    } catch (InvocationTargetException e) {
+      Throwable cause = e.getCause();
+      Throwables.throwIfInstanceOf(cause, Exception.class);
+      Throwables.throwIfUnchecked(cause);
+      throw e;
+    }
+    return factory.create(
+        context.getAllocator(),
+        probeIncoming,
+        build,
+        context.getTargetBatchSize(),
+        targetGenerateAtOnce,
+        batchCounts,
+        expression);
   }
 
   @SuppressWarnings("unchecked")
   @Override
   public void noMoreToConsumeRight() throws Exception {
-    if(buildRecords == 0 && (joinType == JoinRelType.INNER || joinType == JoinRelType.RIGHT)) {
+    if (buildRecords == 0 && (joinType == JoinRelType.INNER || joinType == JoinRelType.RIGHT)) {
       state = State.DONE;
       return;
     }
 
-    if(buildRecords == 0) {
+    if (buildRecords == 0) {
       this.joinMatcher = new StraightThroughMatcher(output, probeOutputTransfers);
     } else {
       Stopwatch watch = Stopwatch.createStarted();
-      List<FieldVector[]> buildInputVectors = (List<FieldVector[]>) (Object) StreamSupport.stream(build.spliterator(), false).map(VectorWrapper::getValueVectors).collect(Collectors.toList());
-      final int targetGenerateAtOnce = (int) context.getOptions().getOption(NestedLoopJoinPrel.OUTPUT_COUNT);
-      this.joinMatcher = new EvaluatingJoinMatcher(context, probeIncoming, build,
-        targetGenerateAtOnce,
-        getInitialMatchState(),
-        copierFactory.getTwoByteCopiers(probeInputVectors, probeOutputVectors),
-        copierFactory.getFourByteCopiers(buildInputVectors, buildOutputVectors),
-        joinType
-      );
+      List<FieldVector[]> buildInputVectors =
+          (List<FieldVector[]>)
+              (Object)
+                  StreamSupport.stream(build.spliterator(), false)
+                      .map(VectorWrapper::getValueVectors)
+                      .collect(Collectors.toList());
+      final int targetGenerateAtOnce =
+          (int) context.getOptions().getOption(NestedLoopJoinPrel.OUTPUT_COUNT);
+      this.joinMatcher =
+          new EvaluatingJoinMatcher(
+              context,
+              probeIncoming,
+              build,
+              targetGenerateAtOnce,
+              getInitialMatchState(),
+              copierFactory.getTwoByteCopiers(probeInputVectors, probeOutputVectors),
+              copierFactory.getFourByteCopiers(buildInputVectors, buildOutputVectors),
+              joinType);
       context.getStats().setLongStat(Metric.COMPILE_NANOS, watch.elapsed(TimeUnit.NANOSECONDS));
-
     }
 
     joinMatcher.setup(config.getCondition(), context.getClassProducer(), probeIncoming, build);
@@ -221,7 +270,7 @@ public class NLJEOperator implements DualInputOperator {
     Preconditions.checkArgument(!joinMatcher.needNextInput());
 
     int records = joinMatcher.output();
-    if(joinMatcher.needNextInput()) {
+    if (joinMatcher.needNextInput()) {
       state = State.CAN_CONSUME_L;
     }
     output.setAllCount(records);
@@ -236,7 +285,7 @@ public class NLJEOperator implements DualInputOperator {
 
     joinMatcher.startNextProbe(records);
 
-    if(!joinMatcher.needNextInput()) {
+    if (!joinMatcher.needNextInput()) {
       // if we can produce output, we don't want to consume another batch of records.
       state = State.CAN_PRODUCE;
     }
@@ -260,8 +309,7 @@ public class NLJEOperator implements DualInputOperator {
     MATCH_NANOS,
     COPY_NANOS,
     COMPILE_NANOS,
-    PROBE_COUNT
-    ;
+    PROBE_COUNT;
 
     @Override
     public int metricId() {
