@@ -15,15 +15,6 @@
  */
 package com.dremio.service.reflection;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-
-import javax.annotation.Nullable;
-import javax.inject.Provider;
-
 import com.dremio.catalog.model.dataset.TableVersionType;
 import com.dremio.common.exceptions.UserException;
 import com.dremio.exec.catalog.Catalog;
@@ -31,13 +22,13 @@ import com.dremio.exec.catalog.CatalogUtil;
 import com.dremio.exec.catalog.EntityExplorer;
 import com.dremio.exec.catalog.VersionedDatasetId;
 import com.dremio.exec.ops.ReflectionContext;
+import com.dremio.exec.planner.AccelerationDetailsPopulator;
 import com.dremio.exec.planner.sql.PartitionTransform;
 import com.dremio.exec.planner.sql.SchemaUtilities;
 import com.dremio.exec.planner.sql.parser.SqlCreateReflection;
 import com.dremio.exec.planner.sql.parser.SqlCreateReflection.MeasureType;
 import com.dremio.exec.planner.sql.parser.SqlCreateReflection.NameAndMeasures;
 import com.dremio.exec.store.CatalogService;
-import com.dremio.exec.store.sys.accel.AccelerationDetailsPopulator;
 import com.dremio.exec.store.sys.accel.AccelerationManager;
 import com.dremio.exec.store.sys.accel.LayoutDefinition;
 import com.dremio.exec.store.sys.accel.LayoutDefinition.Type;
@@ -62,22 +53,29 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.google.common.base.Function;
 import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+import javax.annotation.Nullable;
+import javax.inject.Provider;
 
-/**
- * Exposes the acceleration manager interface to the rest of the system (coordinator side)
- */
+/** Exposes the acceleration manager interface to the rest of the system (coordinator side) */
 public class AccelerationManagerImpl implements AccelerationManager {
 
-  private static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(AccelerationManagerImpl.class);
+  private static final org.slf4j.Logger logger =
+      org.slf4j.LoggerFactory.getLogger(AccelerationManagerImpl.class);
 
-  private final Provider<ReflectionAdministrationService.Factory> reflectionAdministrationServiceFactory;
+  private final Provider<ReflectionAdministrationService.Factory>
+      reflectionAdministrationServiceFactory;
   private final Provider<ReflectionService> reflectionService;
   private final Provider<CatalogService> catalogService;
 
   public AccelerationManagerImpl(
-    Provider<ReflectionService> reflectionService,
-    Provider<ReflectionAdministrationService.Factory> reflectionAdministrationServiceFactory,
-    Provider<CatalogService> catalogService) {
+      Provider<ReflectionService> reflectionService,
+      Provider<ReflectionAdministrationService.Factory> reflectionAdministrationServiceFactory,
+      Provider<CatalogService> catalogService) {
     super();
     this.reflectionService = reflectionService;
     this.catalogService = catalogService;
@@ -90,25 +88,32 @@ public class AccelerationManagerImpl implements AccelerationManager {
   }
 
   @Override
-  public void dropAcceleration(List<String> path, boolean raiseErrorIfNotFound) {
-  }
+  public void dropAcceleration(List<String> path, boolean raiseErrorIfNotFound) {}
 
   @Override
-  public void addLayout(SchemaUtilities.TableWithPath tableWithPath, LayoutDefinition definition, ReflectionContext reflectionContext) {
+  public void addLayout(
+      SchemaUtilities.TableWithPath tableWithPath,
+      LayoutDefinition definition,
+      ReflectionContext reflectionContext) {
     final NamespaceKey key = new NamespaceKey(tableWithPath.getPath());
     final DatasetConfig datasetConfig;
     final EntityExplorer catalog = CatalogUtil.getSystemCatalogForReflections(catalogService.get());
     String datasetId = null;
     try {
       datasetId = tableWithPath.getTable().getDatasetConfig().getId().getId();
-      datasetConfig =  CatalogUtil.getDatasetConfig(catalog, datasetId);
-      if(datasetConfig == null) {
-        throw UserException.validationError().message("Unable to find requested dataset %s.", key).build(logger);
+      datasetConfig = CatalogUtil.getDatasetConfig(catalog, datasetId);
+      if (datasetConfig == null) {
+        throw UserException.validationError()
+            .message("Unable to find requested dataset %s.", key)
+            .build(logger);
       }
-    } catch(Exception e) {
-      throw UserException.validationError(e).message("Unable to find requested dataset %s.", key).build(logger);
+    } catch (Exception e) {
+      throw UserException.validationError(e)
+          .message("Unable to find requested dataset %s.", key)
+          .build(logger);
     }
-    validateReflectionSupportForTimeTravelOnVersionedSource(tableWithPath.getPath().get(0), datasetId, (Catalog) catalog);
+    validateReflectionSupportForTimeTravelOnVersionedSource(
+        tableWithPath.getPath().get(0), datasetId, (Catalog) catalog);
 
     ReflectionGoal goal = new ReflectionGoal();
     ReflectionDetails details = new ReflectionDetails();
@@ -118,26 +123,30 @@ public class AccelerationManagerImpl implements AccelerationManager {
     details.setDistributionFieldList(toDescriptor(definition.getDistribution()));
     details.setMeasureFieldList(toMeasureFields(definition.getMeasure()));
     final List<ReflectionPartitionField> reflectionPartitionFields = new ArrayList<>();
-    for(final PartitionTransform partitionTransform:definition.getPartition()){
+    for (final PartitionTransform partitionTransform : definition.getPartition()) {
       final List<String> fieldName = new ArrayList<>();
       fieldName.add(partitionTransform.getColumnName());
       List<ReflectionField> reflectionFields = toDescriptor(fieldName);
       ReflectionField reflectionField = reflectionFields.get(0);
-      ReflectionPartitionField reflectionPartitionField = new ReflectionPartitionField(reflectionField.getName());
+      ReflectionPartitionField reflectionPartitionField =
+          new ReflectionPartitionField(reflectionField.getName());
       Transform transform = buildProtoTransformFromPartitionTransform(partitionTransform);
       reflectionPartitionField.setTransform(transform);
       reflectionPartitionFields.add(reflectionPartitionField);
     }
     details.setPartitionFieldList(reflectionPartitionFields);
     details.setSortFieldList(toDescriptor(definition.getSort()));
-    details.setPartitionDistributionStrategy(definition.getPartitionDistributionStrategy() ==
-        com.dremio.exec.planner.sql.parser.PartitionDistributionStrategy.STRIPED ?
-        PartitionDistributionStrategy.STRIPED : PartitionDistributionStrategy.CONSOLIDATED);
+    details.setPartitionDistributionStrategy(
+        definition.getPartitionDistributionStrategy()
+                == com.dremio.exec.planner.sql.parser.PartitionDistributionStrategy.STRIPED
+            ? PartitionDistributionStrategy.STRIPED
+            : PartitionDistributionStrategy.CONSOLIDATED);
 
     goal.setName(definition.getName());
     goal.setArrowCachingEnabled(definition.getArrowCachingEnabled());
     goal.setState(ReflectionGoalState.ENABLED);
-    goal.setType(definition.getType() == Type.AGGREGATE ? ReflectionType.AGGREGATION : ReflectionType.RAW);
+    goal.setType(
+        definition.getType() == Type.AGGREGATE ? ReflectionType.AGGREGATION : ReflectionType.RAW);
     goal.setDatasetId(datasetConfig.getId().getId());
 
     reflectionAdministrationServiceFactory.get().get(reflectionContext).create(goal);
@@ -145,110 +154,141 @@ public class AccelerationManagerImpl implements AccelerationManager {
 
   /**
    * Given a PartitionTransform convert it to equivalent proto.Transform
+   *
    * @param partitionTransform partition transform to convert
    * @return proto.Transform equivalent to the passed in PartitionTransform
    */
-  public Transform buildProtoTransformFromPartitionTransform(PartitionTransform partitionTransform){
-  Transform transform = new Transform();
-  transform.setType(Transform.Type.valueOf(partitionTransform.getType().toString()));
-  switch (transform.getType()) {
-    case BUCKET:
-      Integer count = partitionTransform.getArgumentValue(0, Integer.class);
-      BucketTransform bucketTransform = new BucketTransform();
-      bucketTransform.setBucketCount(count);
-      transform.setBucketTransform(bucketTransform);
-      break;
-    case TRUNCATE:
-      Integer length = partitionTransform.getArgumentValue(0, Integer.class);
-      TruncateTransform truncateTransform = new TruncateTransform();
-      truncateTransform.setTruncateLength(length);
-      transform.setTruncateTransform(truncateTransform);
-      break;
-    case IDENTITY:
-    case YEAR:
-    case MONTH:
-    case DAY:
-    case HOUR:
-      //do nothing, transform.setType is already called above so type is set correctly
-      //no arguments are needed for the transforms in this list
-      break;
-    default:
-      throw new RuntimeException(String.format("Unsupported partition transform type %s.", transform.getType()));
+  public Transform buildProtoTransformFromPartitionTransform(
+      PartitionTransform partitionTransform) {
+    Transform transform = new Transform();
+    transform.setType(Transform.Type.valueOf(partitionTransform.getType().toString()));
+    switch (transform.getType()) {
+      case BUCKET:
+        Integer count = partitionTransform.getArgumentValue(0, Integer.class);
+        BucketTransform bucketTransform = new BucketTransform();
+        bucketTransform.setBucketCount(count);
+        transform.setBucketTransform(bucketTransform);
+        break;
+      case TRUNCATE:
+        Integer length = partitionTransform.getArgumentValue(0, Integer.class);
+        TruncateTransform truncateTransform = new TruncateTransform();
+        truncateTransform.setTruncateLength(length);
+        transform.setTruncateTransform(truncateTransform);
+        break;
+      case IDENTITY:
+      case YEAR:
+      case MONTH:
+      case DAY:
+      case HOUR:
+        // do nothing, transform.setType is already called above so type is set correctly
+        // no arguments are needed for the transforms in this list
+        break;
+      default:
+        throw new RuntimeException(
+            String.format("Unsupported partition transform type %s.", transform.getType()));
+    }
+    return transform;
   }
-  return transform;
-}
-  private List<ReflectionDimensionField> toDimensionFields(List<SqlCreateReflection.NameAndGranularity> fields) {
+
+  private List<ReflectionDimensionField> toDimensionFields(
+      List<SqlCreateReflection.NameAndGranularity> fields) {
     return FluentIterable.from(AccelerationUtils.selfOrEmpty(fields))
-        .transform(new Function<SqlCreateReflection.NameAndGranularity, ReflectionDimensionField>() {
-          @Nullable
-          @Override
-          public ReflectionDimensionField apply(@Nullable final SqlCreateReflection.NameAndGranularity input) {
-            final DimensionGranularity granularity = input.getGranularity() == SqlCreateReflection.Granularity.BY_DAY ? DimensionGranularity.DATE : DimensionGranularity.NORMAL;
-            return new ReflectionDimensionField()
-                .setName(input.getName())
-                .setGranularity(granularity);
-          }
-        })
+        .transform(
+            new Function<SqlCreateReflection.NameAndGranularity, ReflectionDimensionField>() {
+              @Nullable
+              @Override
+              public ReflectionDimensionField apply(
+                  @Nullable final SqlCreateReflection.NameAndGranularity input) {
+                final DimensionGranularity granularity =
+                    input.getGranularity() == SqlCreateReflection.Granularity.BY_DAY
+                        ? DimensionGranularity.DATE
+                        : DimensionGranularity.NORMAL;
+                return new ReflectionDimensionField()
+                    .setName(input.getName())
+                    .setGranularity(granularity);
+              }
+            })
         .toList();
   }
 
-  private List<ReflectionField> toDescriptor(List<String> fields){
-    if(fields == null){
+  private List<ReflectionField> toDescriptor(List<String> fields) {
+    if (fields == null) {
       return ImmutableList.of();
     }
 
-    return FluentIterable.from(fields).transform(new Function<String, ReflectionField>(){
+    return FluentIterable.from(fields)
+        .transform(
+            new Function<String, ReflectionField>() {
 
-      @Override
-      public ReflectionField apply(String input) {
-        return new ReflectionField(input);
-      }}).toList();
+              @Override
+              public ReflectionField apply(String input) {
+                return new ReflectionField(input);
+              }
+            })
+        .toList();
   }
 
-  private List<ReflectionMeasureField> toMeasureFields(List<NameAndMeasures> fields){
-    if(fields == null){
+  private List<ReflectionMeasureField> toMeasureFields(List<NameAndMeasures> fields) {
+    if (fields == null) {
       return ImmutableList.of();
     }
 
-    return FluentIterable.from(fields).transform(new Function<NameAndMeasures, ReflectionMeasureField>(){
+    return FluentIterable.from(fields)
+        .transform(
+            new Function<NameAndMeasures, ReflectionMeasureField>() {
 
-      @Override
-      public ReflectionMeasureField apply(NameAndMeasures input) {
-        return new ReflectionMeasureField(input.getName())
-            .setMeasureTypeList(input.getMeasureTypes().stream()
-                .map(AccelerationManagerImpl::toMeasureType)
-                .collect(Collectors.toList()));
-      }}).toList();
+              @Override
+              public ReflectionMeasureField apply(NameAndMeasures input) {
+                return new ReflectionMeasureField(input.getName())
+                    .setMeasureTypeList(
+                        input.getMeasureTypes().stream()
+                            .map(AccelerationManagerImpl::toMeasureType)
+                            .collect(Collectors.toList()));
+              }
+            })
+        .toList();
   }
 
-  private static com.dremio.service.reflection.proto.MeasureType toMeasureType(MeasureType t){
-    switch(t) {
-    case APPROX_COUNT_DISTINCT:
-      return com.dremio.service.reflection.proto.MeasureType.APPROX_COUNT_DISTINCT;
-    case COUNT:
-      return com.dremio.service.reflection.proto.MeasureType.COUNT;
-    case MAX:
-      return com.dremio.service.reflection.proto.MeasureType.MAX;
-    case MIN:
-      return com.dremio.service.reflection.proto.MeasureType.MIN;
-    case SUM:
-      return com.dremio.service.reflection.proto.MeasureType.SUM;
-    case UNKNOWN:
-    default:
-      throw new UnsupportedOperationException(t.name());
-
+  private static com.dremio.service.reflection.proto.MeasureType toMeasureType(MeasureType t) {
+    switch (t) {
+      case APPROX_COUNT_DISTINCT:
+        return com.dremio.service.reflection.proto.MeasureType.APPROX_COUNT_DISTINCT;
+      case COUNT:
+        return com.dremio.service.reflection.proto.MeasureType.COUNT;
+      case MAX:
+        return com.dremio.service.reflection.proto.MeasureType.MAX;
+      case MIN:
+        return com.dremio.service.reflection.proto.MeasureType.MIN;
+      case SUM:
+        return com.dremio.service.reflection.proto.MeasureType.SUM;
+      case UNKNOWN:
+      default:
+        throw new UnsupportedOperationException(t.name());
     }
   }
 
   @Override
-  public void addExternalReflection(String name, List<String> table, List<String> targetTable, ReflectionContext reflectionContext) {
-    reflectionAdministrationServiceFactory.get().get(reflectionContext).createExternalReflection(name, table, targetTable);
+  public void addExternalReflection(
+      String name,
+      List<String> table,
+      List<String> targetTable,
+      ReflectionContext reflectionContext) {
+    reflectionAdministrationServiceFactory
+        .get()
+        .get(reflectionContext)
+        .createExternalReflection(name, table, targetTable);
   }
 
   @Override
-  public void dropLayout(SchemaUtilities.TableWithPath tableWithPath, final String layoutIdOrName, ReflectionContext reflectionContext) {
-    ReflectionAdministrationService administrationReflectionService = reflectionAdministrationServiceFactory.get().get(reflectionContext);
-    for (ReflectionGoal rg : administrationReflectionService.getReflectionsByDatasetId(tableWithPath.getTable().getDatasetConfig().getId().getId())) {
+  public void dropLayout(
+      SchemaUtilities.TableWithPath tableWithPath,
+      final String layoutIdOrName,
+      ReflectionContext reflectionContext) {
+    ReflectionAdministrationService administrationReflectionService =
+        reflectionAdministrationServiceFactory.get().get(reflectionContext);
+    for (ReflectionGoal rg :
+        administrationReflectionService.getReflectionsByDatasetId(
+            tableWithPath.getTable().getDatasetConfig().getId().getId())) {
       if (rg.getId().getId().equals(layoutIdOrName) || layoutIdOrName.equals(rg.getName())) {
         administrationReflectionService.remove(rg);
         // only match first and exist.
@@ -256,12 +296,18 @@ public class AccelerationManagerImpl implements AccelerationManager {
       }
     }
 
-    Optional<ExternalReflection> er = StreamSupport.stream(administrationReflectionService.getExternalReflectionByDatasetPath(tableWithPath.getPath()).spliterator(), false)
-      .filter(externalReflection -> {
-        return layoutIdOrName.equalsIgnoreCase(externalReflection.getName()) ||
-          layoutIdOrName.equals(externalReflection.getId());
-      })
-      .findFirst();
+    Optional<ExternalReflection> er =
+        StreamSupport.stream(
+                administrationReflectionService
+                    .getExternalReflectionByDatasetPath(tableWithPath.getPath())
+                    .spliterator(),
+                false)
+            .filter(
+                externalReflection -> {
+                  return layoutIdOrName.equalsIgnoreCase(externalReflection.getName())
+                      || layoutIdOrName.equals(externalReflection.getId());
+                })
+            .findFirst();
 
     if (er.isPresent()) {
       administrationReflectionService.dropExternalReflection(er.get().getId());
@@ -271,25 +317,30 @@ public class AccelerationManagerImpl implements AccelerationManager {
   }
 
   @Override
-  public void toggleAcceleration(SchemaUtilities.TableWithPath tableWithPath, Type type, boolean enable, ReflectionContext reflectionContext) {
+  public void toggleAcceleration(
+      SchemaUtilities.TableWithPath tableWithPath,
+      Type type,
+      boolean enable,
+      ReflectionContext reflectionContext) {
     Exception ex = null;
-    ReflectionAdministrationService administrationReflectionService = reflectionAdministrationServiceFactory.get().get(reflectionContext);
+    ReflectionAdministrationService administrationReflectionService =
+        reflectionAdministrationServiceFactory.get().get(reflectionContext);
 
-    for(ReflectionGoal g : administrationReflectionService.getReflectionsByDatasetId(tableWithPath.getTable().getDatasetConfig().getId().getId())) {
-      if(
-          (type == Type.AGGREGATE && g.getType() != ReflectionType.AGGREGATION) ||
-          (type == Type.RAW && g.getType() != ReflectionType.RAW) ||
-          (g.getState() == ReflectionGoalState.ENABLED && enable) ||
-          (g.getState() == ReflectionGoalState.DISABLED && !enable)
-          ) {
+    for (ReflectionGoal g :
+        administrationReflectionService.getReflectionsByDatasetId(
+            tableWithPath.getTable().getDatasetConfig().getId().getId())) {
+      if ((type == Type.AGGREGATE && g.getType() != ReflectionType.AGGREGATION)
+          || (type == Type.RAW && g.getType() != ReflectionType.RAW)
+          || (g.getState() == ReflectionGoalState.ENABLED && enable)
+          || (g.getState() == ReflectionGoalState.DISABLED && !enable)) {
         continue;
       }
 
       try {
         g.setState(enable ? ReflectionGoalState.ENABLED : ReflectionGoalState.DISABLED);
         administrationReflectionService.update(g);
-      } catch(Exception e) {
-        if(ex == null) {
+      } catch (Exception e) {
+        if (ex == null) {
           ex = e;
         } else {
           ex.addSuppressed(e);
@@ -297,36 +348,46 @@ public class AccelerationManagerImpl implements AccelerationManager {
       }
     }
 
-    if(ex != null) {
-      throw UserException.validationError(ex).message("Unable to toggle acceleration, already in requested state.").build(logger);
+    if (ex != null) {
+      throw UserException.validationError(ex)
+          .message("Unable to toggle acceleration, already in requested state.")
+          .build(logger);
     }
   }
 
   @Override
-  public void replanlayout(String layoutId) {
-  }
+  public void replanlayout(String layoutId) {}
 
   @Override
   public AccelerationDetailsPopulator newPopulator() {
-    return new ReflectionDetailsPopulatorImpl( reflectionService.get(), catalogService.get());
+    return new ReflectionDetailsPopulatorImpl(reflectionService.get(), catalogService.get());
   }
 
   @SuppressWarnings("unchecked")
   @Override
   public <T> T unwrap(Class<T> clazz) {
-    if(ReflectionService.class.isAssignableFrom(clazz)) {
+    if (ReflectionService.class.isAssignableFrom(clazz)) {
       return (T) reflectionService.get();
+    }
+    if (ReflectionAdministrationService.Factory.class.isAssignableFrom(clazz)) {
+      return (T) reflectionAdministrationServiceFactory.get();
     }
     return null;
   }
 
   // This helper is to determine if there ia TIMESTAMP specified on an Versioned table.
-  // We want to disallow AT TIMESTAMP specifiication when creating reflections. This is because the VersionDatasetId
-  // will not contain the branch information if we allow this. So when we later go to lookup the table using the saved VersionedDatasetId,
-  // we won't have the branch information to lookup the table in Nessie and will always lookup only in the default branch.
-  // Eg if the currrent context is dev and we are creating a reflection AT TIMESTAMP T1 , the table is resolved to <dev + T1>.
-  // Later when we lookup the table, we  don't save the 'dev' branch context in it, so we will lookup the tableat <default branch + T1>.
-  private void validateReflectionSupportForTimeTravelOnVersionedSource(String source, String datasetId, Catalog catalog) {
+  // We want to disallow AT TIMESTAMP specifiication when creating reflections. This is because the
+  // VersionDatasetId
+  // will not contain the branch information if we allow this. So when we later go to lookup the
+  // table using the saved VersionedDatasetId,
+  // we won't have the branch information to lookup the table in Nessie and will always lookup only
+  // in the default branch.
+  // Eg if the currrent context is dev and we are creating a reflection AT TIMESTAMP T1 , the table
+  // is resolved to <dev + T1>.
+  // Later when we lookup the table, we  don't save the 'dev' branch context in it, so we will
+  // lookup the tableat <default branch + T1>.
+  private void validateReflectionSupportForTimeTravelOnVersionedSource(
+      String source, String datasetId, Catalog catalog) {
     VersionedDatasetId versionedDatasetId = null;
     try {
       // first check to see if it's a VersionedDatasetId
@@ -335,9 +396,12 @@ public class AccelerationManagerImpl implements AccelerationManager {
       // Assume this is a non versioned dataset id .
       return;
     }
-    if ((CatalogUtil.requestedPluginSupportsVersionedTables(source, catalog)) &&
-      versionedDatasetId.getVersionContext().getType() == TableVersionType.TIMESTAMP) {
-      throw UserException.validationError().message("Cannot create reflection on versioned table or view with TIMESTAMP specified. Please use BRANCH, TAG or COMMIT instead.").build(logger);
+    if ((CatalogUtil.requestedPluginSupportsVersionedTables(source, catalog))
+        && versionedDatasetId.getVersionContext().getType() == TableVersionType.TIMESTAMP) {
+      throw UserException.validationError()
+          .message(
+              "Cannot create reflection on versioned table or view with TIMESTAMP specified. Please use BRANCH, TAG or COMMIT instead.")
+          .build(logger);
     }
   }
 }
