@@ -34,22 +34,21 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 
-/**
- * An adapter to bridge KVStoreProvider to LegacyKVStoreProvider.
- */
+/** An adapter to bridge KVStoreProvider to LegacyKVStoreProvider. */
 public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
-  private static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(LegacyKVStoreProviderAdapter.class);
+  private static final org.slf4j.Logger logger =
+      org.slf4j.LoggerFactory.getLogger(LegacyKVStoreProviderAdapter.class);
 
   private final KVStoreProvider underlyingProvider;
 
-  private LoadingCache<Class<? extends LegacyStoreCreationFunction<?, ?, ?, ?>>, LegacyKVStore<?, ?>> stores;
+  private LoadingCache<
+          Class<? extends LegacyStoreCreationFunction<?, ?, ?, ?>>, LegacyKVStore<?, ?>>
+      stores;
 
   @SuppressWarnings("NoGuavaCacheUsage") // TODO: fix as part of DX-51884
   public LegacyKVStoreProviderAdapter(KVStoreProvider underlyingProvider) {
     this.underlyingProvider = underlyingProvider;
-    this.stores = CacheBuilder
-        .newBuilder()
-        .build(CacheLoader.from(this::newStore));
+    this.stores = CacheBuilder.newBuilder().build(CacheLoader.from(this::newStore));
   }
 
   /**
@@ -60,7 +59,8 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
    */
   @Deprecated
   public static LegacyKVStoreProvider inMemory(ScanResult scanResult) {
-    final LocalKVStoreProvider kvStoreProvider = new LocalKVStoreProvider(scanResult, null, true, false);
+    final LocalKVStoreProvider kvStoreProvider =
+        new LocalKVStoreProvider(scanResult, null, true, false);
     return new LegacyKVStoreProviderAdapter(kvStoreProvider) {
       @Override
       public void start() throws Exception {
@@ -79,7 +79,9 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
   @Override
   public <K, V, T extends LegacyKVStore<K, V>, U extends KVStore<K, V>> T getStore(
       Class<? extends LegacyStoreCreationFunction<K, V, T, U>> creator) {
-    return (T) Preconditions.checkNotNull(stores.getUnchecked(creator), "Unknown store creator %s", creator.getName());
+    return (T)
+        Preconditions.checkNotNull(
+            stores.getUnchecked(creator), "Unknown store creator %s", creator.getName());
   }
 
   @Override
@@ -87,38 +89,42 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
     logger.info("Starting LegacyKVStoreProviderAdapter.");
   }
 
-  private LegacyKVStore<?, ?> newStore(Class<? extends LegacyStoreCreationFunction<?, ?, ?, ?>> functionClass) {
+  private LegacyKVStore<?, ?> newStore(
+      Class<? extends LegacyStoreCreationFunction<?, ?, ?, ?>> functionClass) {
     try {
-      LegacyStoreBuildingFactory factory = new LegacyStoreBuildingFactory() {
-        @Override
-        public <K, V> LegacyStoreBuilder<K, V> newStore() {
-          return LegacyKVStoreProviderAdapter.this.newStoreBuilder(functionClass);
-        }
-      };
-      return functionClass.newInstance().build(factory);
+      LegacyStoreBuildingFactory factory =
+          new LegacyStoreBuildingFactory() {
+            @Override
+            public <K, V> LegacyStoreBuilder<K, V> newStore() {
+              return LegacyKVStoreProviderAdapter.this.newStoreBuilder(functionClass);
+            }
+          };
+      return functionClass.getDeclaredConstructor().newInstance().build(factory);
     } catch (Exception e) {
       logger.warn("Unable to load StoreCreationFunction {}", functionClass.getSimpleName(), e);
       return null;
     }
   }
 
-  private <K, V> LegacyStoreBuilder<K, V> newStoreBuilder(Class<? extends LegacyStoreCreationFunction<?, ?, ?, ?>> functionClass) {
+  private <K, V> LegacyStoreBuilder<K, V> newStoreBuilder(
+      Class<? extends LegacyStoreCreationFunction<?, ?, ?, ?>> functionClass) {
     return new LegacyStoreBuilderAdapter<K, V>(() -> underlyingProvider.newStore()) {
       @Override
       protected KVStore<K, V> doBuild() {
-        return underlyingProvider.getStore((Class<? extends StoreCreationFunction<K, V, KVStore<K, V>>>) functionClass);
+        return underlyingProvider.getStore(
+            (Class<? extends StoreCreationFunction<K, V, KVStore<K, V>>>) functionClass);
       }
 
       @Override
       protected IndexedStore<K, V> doBuildIndexed(DocumentConverter<K, V> documentConverter) {
-        return underlyingProvider.getStore((Class<? extends StoreCreationFunction<K, V, IndexedStore<K, V>>>) functionClass);
+        return underlyingProvider.getStore(
+            (Class<? extends StoreCreationFunction<K, V, IndexedStore<K, V>>>) functionClass);
       }
     };
   }
 
   @Override
-  public void close() throws Exception {
-  }
+  public void close() throws Exception {}
 
   @Override
   public <T> T unwrap(Class<T> clazz) {
@@ -137,10 +143,11 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
    * @param <V> value type V.
    */
   public static class LegacyStoreBuilderAdapter<K, V> extends LegacyAbstractStoreBuilder<K, V> {
-    private final Supplier<KVStoreProvider.StoreBuilder<K,V>> underlyingStoreBuilderFactory;
+    private final Supplier<KVStoreProvider.StoreBuilder<K, V>> underlyingStoreBuilderFactory;
     private boolean permitCompoundKeys = false;
 
-    public LegacyStoreBuilderAdapter(Supplier<KVStoreProvider.StoreBuilder<K,V>> underlyingStoreBuilderFactory) {
+    public LegacyStoreBuilderAdapter(
+        Supplier<KVStoreProvider.StoreBuilder<K, V>> underlyingStoreBuilderFactory) {
       this.underlyingStoreBuilderFactory = underlyingStoreBuilderFactory;
     }
 
@@ -151,8 +158,8 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
     }
 
     protected KVStore<K, V> doBuild() {
-      LegacyStoreBuilderHelper<K,V> legacyHelper = getStoreBuilderHelper();
-      final KVStoreProvider.StoreBuilder<K,V> builder = underlyingStoreBuilderFactory.get();
+      LegacyStoreBuilderHelper<K, V> legacyHelper = getStoreBuilderHelper();
+      final KVStoreProvider.StoreBuilder<K, V> builder = underlyingStoreBuilderFactory.get();
       populateBuilder(builder, legacyHelper, permitCompoundKeys);
 
       return builder.build();
@@ -160,12 +167,13 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
 
     @Override
     public LegacyKVStore<K, V> build() {
-      return new LegacyKVStoreAdapter<>(doBuild(), getStoreBuilderHelper().tryGetVersionExtractor());
+      return new LegacyKVStoreAdapter<>(
+          doBuild(), getStoreBuilderHelper().tryGetVersionExtractor());
     }
 
     protected IndexedStore<K, V> doBuildIndexed(DocumentConverter<K, V> documentConverter) {
-      LegacyStoreBuilderHelper<K,V> legacyHelper = getStoreBuilderHelper();
-      final KVStoreProvider.StoreBuilder<K,V> builder = underlyingStoreBuilderFactory.get();
+      LegacyStoreBuilderHelper<K, V> legacyHelper = getStoreBuilderHelper();
+      final KVStoreProvider.StoreBuilder<K, V> builder = underlyingStoreBuilderFactory.get();
       populateBuilder(builder, legacyHelper, permitCompoundKeys);
 
       return builder.buildIndexed(documentConverter);
@@ -173,26 +181,27 @@ public class LegacyKVStoreProviderAdapter implements LegacyKVStoreProvider {
 
     @Override
     public LegacyIndexedStore<K, V> buildIndexed(DocumentConverter<K, V> documentConverter) {
-      return new LegacyIndexedStoreAdapter<>(doBuildIndexed(documentConverter),
-          getStoreBuilderHelper().tryGetVersionExtractor());
+      return new LegacyIndexedStoreAdapter<>(
+          doBuildIndexed(documentConverter), getStoreBuilderHelper().tryGetVersionExtractor());
     }
 
     /**
-     * Helper method to set configurations in StoreBuilder with settings provided by the
-     * this LegacyStoreBuilder.
+     * Helper method to set configurations in StoreBuilder with settings provided by the this
+     * LegacyStoreBuilder.
      *
      * @param builder the KVStoreProvider.StoreBuilder with configurations to be set.
      * @param legacyStoreBuilderHelper legacy helper to provide settings for builder.
      * @param permitCompoundKeys Indicates if CompoundKeys should be allowed.
      */
-    private void populateBuilder(KVStoreProvider.StoreBuilder<K, V> builder,
-                                 LegacyStoreBuilderHelper<K,V> legacyStoreBuilderHelper,
-                                 boolean permitCompoundKeys) {
+    private void populateBuilder(
+        KVStoreProvider.StoreBuilder<K, V> builder,
+        LegacyStoreBuilderHelper<K, V> legacyStoreBuilderHelper,
+        boolean permitCompoundKeys) {
       builder
-        .name(legacyStoreBuilderHelper.getName())
-        .keyFormat(legacyStoreBuilderHelper.getKeyFormat())
-        .valueFormat(legacyStoreBuilderHelper.getValueFormat())
-        .permitCompoundKeys(permitCompoundKeys);
+          .name(legacyStoreBuilderHelper.getName())
+          .keyFormat(legacyStoreBuilderHelper.getKeyFormat())
+          .valueFormat(legacyStoreBuilderHelper.getValueFormat())
+          .permitCompoundKeys(permitCompoundKeys);
     }
   }
 }
